--- a/article/sg0/doc/0127.md
+++ b/article/sg0/doc/0127.md
@@ -1,6 +1,6 @@
 # 盟誓的文艺复兴 - 05
 > 1.055821  
-> [ 2036/03/07 ]冈伦终于亲身体验到了自以为知道却始终没有正视的 β 世界线未来战争的地狱，意识到了自己的一直以来的自以为是与自我欺骗，实际上谁都没能拯救，只有自己得救。冈伦收到了 2025 年的自己的口信，要将“红莉栖”从『Amadeus』的诅咒中解放出来。他终于下定决心，通过桶子和真帆一直精心维持的时间跳跃环境，进行近 3000 次的时间跳跃回到过去。这部分，游戏的处理是直接一个转场带过，不如动画处理得燃。跳跃回过去的方案是桶子提出的，和真帆共同维护的；动画处理为冈伦自己意识到时间跳跃装置的存在，是因为衔接的是前文时间跳跃的剧情。游戏里真帆主动提出自己改良了时间跳跃的长度，要冈伦以后替她向红莉栖炫耀。并且游戏中当前世界线应该没有『Amadeus』的“红莉栖”。  
+> [ 2036/03/07 ]冈伦终于亲身体验到了自以为知道却始终没有正视的 β 世界线未来战争的地狱，意识到了自己的一直以来的自以为是与自我欺骗，实际上谁都没能拯救，只有自己得救。冈伦收到了 2025 年的自己的口信，要将红莉栖从『Amadeus』的诅咒中解放出来。他终于下定决心，通过桶子和真帆一直精心维持的时间跳跃环境，进行近 3000 次的时间跳跃回到过去。这部分，游戏的处理是直接一个转场带过，不如动画处理得燃。跳跃回过去的方案是桶子提出的，和真帆共同维护的；动画处理为冈伦自己意识到时间跳跃装置的存在，是因为衔接的是前文时间跳跃的剧情。游戏里真帆主动提出自己改良了时间跳跃的长度，要冈伦以后替她向红莉栖炫耀。并且游戏中当前世界线应该没有『Amadeus』的“红莉栖”，只有记忆备份。  
 
 | [←prev](./0126) | [menu](../) | [next→](./0128) |
 
@@ -20,20 +20,20 @@
 
 我知道的。不——我一直都**以为**自己是知道的。不到达命运石之门的话，留在 β 世界线的话，全世界迟早会被战火所笼罩。这是听说过无数次的事了。那会是一个怎样的未来，**我一直以为自己知道**。但那只不过是，遥远的未来罢了，没有半点现实感，有的，只是想象罢了。我曾经经历过数百次、数千次的噩梦，原以为没有比那再糟糕的地狱了。但是像这样，亲眼看到、亲耳听到、亲身体会的现在，让我知道了那些都并非只是想象。堆积如山的死尸；成群的饥不择食的野狗；倒下的士兵；炙烤过的肉味；腐烂的内脏味；现在仍然残留在手上的，琉华子的血的温度；真由理的血的温度；红莉栖的血的温度……我想着只要拯救了真由理就行了，对红莉栖见死不救，逃避现实，即使如此，我还以为至少拯救了真由理他们。但是，**到最后我谁也没能拯救，获得拯救的，只有我自己罢了**。自己，只有我自己得救了，其他人谁都没能拯救。红莉栖也是，真由理也是，篝也是，琉华子也是。我谁都没能拯救。  
 
-“把‘红莉栖’从『Amadeus』的诅咒中解放出来吧。”  
+“把红莉栖从『Amadeus』的诅咒中解放出来吧。”  
 “诶？”  
 “这是 2025 年的冈伦，留下的口信……”  
 “我留下的……口信……？”  
-“寻找 *STEINS;GATE* 这条世界线的道路是凶险的。  
+“11 年前的冈伦是这样说的：
+ ‘寻找 *STEINS;GATE* 这条世界线的道路是凶险的。  
  只是重复一次两次，是不可能找到方法的吧。  
  但是，  
- **从那时开始，我们做的所有事情，不也会成为通往命运石之门的道路吗——**  
- **无数的未来，不是都会与过去连接在一起吗——**  
- 11 年前的冈伦是这样说的。”  
-“把‘红莉栖’解放出来……”  
-“所以说，**我们现在所处的世界，并不是无用的，一定也是必要的。**  
- 至少现在的我是这么认为的。”  
- 当然，我也不是说这个世界继续这样下去就好。”  
+ **从那时开始，我们做的所有事情，不是都会成为通往命运石之门的道路吗——**  
+ **无数的未来，不是都与过去连接在一起吗——**  
+ 所以，  
+ **我们现在所处的世界，并不是无用的，一定也是必要的**。  
+ 至少现在的我是这么认为的。  
+ 当然，我也不是说这个世界继续这样下去就好。’”  
 “桶子……”  
 “所以说啊，冈伦，再回去重新思考一次吧？回到你记忆中断的那段时间里……”  
 “回到 2011 年……吗？但是，那种事……”  
@@ -68,7 +68,7 @@
 “我呐……感到后悔……  
  因为『Amadeus』，那孩子死后还被这么多怀有邪念的人所利用……  
  几年……几十年……  
- 所以我也拜托你……把那孩子……把‘红莉栖’从丑恶的欲望漩涡中解放出来……  
+ 所以我也拜托你……把那孩子……把红莉栖从丑恶的欲望漩涡中解放出来……  
  拯救红莉栖……能做到这件事的，冈部先生……只有你了……”  
 “……”  
 我不知道，现在的我能不能做到；也不能保证，接下来的道路一定会通往命运石之门。尽管这样——  
