--- a/article/sg0/doc/0128.md
+++ b/article/sg0/doc/0128.md
@@ -1,107 +1,148 @@
 # 盟誓的文艺复兴 - 06
 > 1.055821  
-> [ 2036/??/?? ] 幼时的篝来访，冈伦与她交谈，但没有说出自己的名字。桶子把冈伦醒来的消息通知真由理等人，结果发现她们中了陷阱外出寻找食材，遭遇袭击。  
+> [ 2011/01/31 ] 冈伦回到了过去，纠结记忆被数据化过的自己是否还算是人类。真帆敏锐地察觉到这一点，与冈伦谈心，得知了全部事实，开解了冈伦，并促使冈伦终于下定决心。一切都是必要的，至少从现在做起，最起码先解放『Amadeus』中的红莉栖。最后真帆正式要求冈伦以后称呼她为“真帆”。  
 
 | [←prev](./0127) | [menu](../) | [next→](./0129) |
 
 ---
 
-突然，外面传来敲门声，有谁过来了的样子。铃羽靠近了门。  
-“你好萌好萌。”  
-“抓住我的心。”  
-“还是那个毫无紧迫感的暗号，铃羽把门锁打开。打开了门，进来的是一位年幼的少女。”  
-
 ![](../static/image/0128-1.png)
 
-“桶子叔叔，铃羽姐姐，嘟嘟噜\~”  
-“篝，我不是说过这里除了有要紧的事情都不要来吗。”  
-“篝……”  
-“这个孩子，是小时候的篝吗！”  
-“对不起。但是妈妈她们大家出门了没有回来嘛。”  
-“嘛嘛，也没必要那么指责她啦。”  
-“爸爸又这么惯着她，这种事情不好好说的话是不行的。”  
-“无视和 25 年前没什么变化的父女，我的目光看向了篝。”  
-“篝也好像注意到了我。”  
-“你好。”  
-“……你好。”  
-“叔叔是谁？”  
-“我吗？我是……”  
+“唔……”  
+痛苦逐渐消退，我看了下握在手中的手机，日期——2011 年 1 月 31 日，18:27。没错，我回来了。好不容易，回到了这个时间。回溯时间之河，重复数千次的时间跳跃，也有在战争中进行的跳跃，好几次濒临死亡。途中也有几次想要放弃，每当这时，我就会想到那个光景。满是废墟的世界，堆积如山的尸体，悲鸣，惨叫，流淌的鲜血，还有目送我离开的桶子一行人的样子。结束了那长得没有道理的旅途，我好不容易回到了这个时间。  
+“冈伦，是有什么不好的消息吗？”  
+“诶……？”  
+“看你接了电话，然后整个人都有点恍惚的样子。”  
+“没、没啦……不是的，不是这样的……”  
+真由理在这里。  
+“难道说，还没有从正月的气氛中缓过神来喵？”  
+菲莉丝也在。  
+“振作一点呐。”  
+桶子也在。琉华子也在。铃羽也在。然后……真帆和篝，都在这里。  
+“难不成，之前的疲劳涌出来了？”  
+“之前？”  
+“就是那个，之前，不是取出你的记忆作为『Amadeus』的样本了吗？”  
+啊啊……是指这个啊，和桶子说的一样，在一月末。  
+“不，不是……只是有点……”  
 “……？”  
-“是这样啊……是你的妈妈的朋友。”  
-“思考了半天该怎么说，结果我还是没有说出我的名字。”  
-“真由理妈妈的？”  
-“啊啊，是的……”  
-“诶……”  
-“妈妈温柔吗？”  
-“嗯！”  
-“喜欢妈妈吗？”  
-“嗯，最——喜欢了！！”  
+“篝……”  
+“嗯？怎么了，冈伦先生？”  
+“来到这个时代后记忆，还没有想起来么……？”  
+“诶？唔，嗯……”  
 “这样啊……”  
-“从篝的表情上看，喜欢的感情像是要满溢出来。”  
-“一定是真由理很耗费心血培养起来的吧。”  
-“一直以来，满满的接受着真由理的爱。”  
-“但是……”  
-“但是她会在这之后跳往过去。”  
-和最喜欢的真由理分别，一个人在过去的世界里……然后被他们抓住，被当作实验品。  
+“怎么了，突然问这个？”  
+“没什么，只是稍微确定一下罢了。”  
+“那算什么嘛，冈伦先生真奇怪。”  
+从未来回来的我是知道的，这条世界线的篝的脑中，已经不存在红莉栖的记忆了。  
+“但是我呐，想着这样也挺不错的呢。  
+ 因为，妈妈、琉华君、留未姐姐都在这里，  
+ 食物也充足，感觉没有什么必要勉强自己想起来。”  
+“这样啊……”  
+现在这样也许不错，但是接下来，这个世界会确实地走向一个充满悲剧的未来。真由理也是。菲莉丝也是。琉华子也是。桶子也是。铃羽也是。篝也是。然后真帆也是。选择了红莉栖的死换来的，竟是这样的未来，这真的是正确的吗？  
 
-“说起来啊爸爸，告诉真由姐她们了吗？叔叔已经醒了的事情。”  
-“啊，不好！完全忘记了，得早点告诉她们！”  
-“桶子取出了小型无线机一样的东西。”  
-“这里是『巴雷尔·提托』。请回答，这里是『巴雷尔·提托』。”  
-“这里是『与星尘的握手』。请讲。”  
-“扬声器传出来的，正是真由理的声音。”  
-“虽然和那个时候比起来，声音要沉着一些，但这肯定是真由理的声音没有错。”  
-“说起来，『与星尘的握手』什么的……、。”  
-“妈妈——！”  
-“啊，篝酱。在桶子叔叔那里么？”  
-“嗯。”  
-“叔叔他有非常重要的事情要做，不要老是打扰他哦？”  
-“好——的。”  
-“比起这样的事，真由喜。有一条特别新闻！”  
-“特别的新闻？”  
-“啊啊……用心听好。冈伦他……醒来了。”  
-“……!。”  
-“真的，么？真的……冈伦他……？”  
-“怎么了么，真由喜！？”  
-“冈伦……冈伦他……”  
-“难不成冈部先生他……醒来了么！？”  
-“真的！？冈伦他，起来了喵！？”  
-“无线电的另一侧，陆续听到了过往熟悉的声音。”  
-“从听到的声音上感觉，我所知道的大家还真是没怎么变。”  
-“所以，你们三个人，还是快点回来的好。”  
-“…………”  
-“真由喜？怎么了，真由喜！？”  
-“不行。真由喜因为太高兴，发不出声音了。”  
-“嘛，也没办法。毕竟最希望冈伦复活的，正是真由喜啊。”  
-“真由理……”  
-“不管怎么说，大家赶快先回来。”  
-“了解了。取得食材后马上就回来。”  
+目送真有理他们离开 LAB 之后，一变成独处状态，疲惫感就一股脑的涌了上来。近 3000 次时间跳跃。本来想在这期间整理信息，但实际上只是为了返回过去就已拼尽全力，哪里还有余裕。不断重复的时间跳跃后，精神上的疲惫逐渐叠加。一度下定的决心也不知动摇了多少次，又重新恢复意志多少次。还是不断在心中对自己说——“无论如何都要回来，那之后才是开始”，才终于回到了这里。因此我的精神已经达到了极限。现在开始该做什么？该怎么做？现在什么都不想考虑。然而身体却与精神背道而驰，非常清醒，一点睡意都没有。  
+没有人的 LAB 温度骤降，彻骨的寒冷席卷而来。但是，和那个时候感觉到的寒冷相比，这里要温和得多。从篝脑中消除红莉栖的记忆后所见到的世界里，红莉栖、真由理——所有人都在。是那个夏天——那个为数不多让人感到平稳的时光。尽管如此，那个世界还是让人感到一股异样的寒冷。到现在才明白，那肯定是，我作为数据沉睡期间的世界吧——由 0 和 1 构成的世界。虽生犹死，虽死犹生。那里确实有非常重要的人在，可是感受不到任何温暖；伸出手就能触碰到事物，但是一点温度都没有。感觉仿佛整个人昏昏沉沉，在光线触及不到、暗黑无比的宇宙中独自漂流着。然后——牧濑红莉栖，现在依然存在于『Amadeus』中，在那个寒冷的、感知不到任何温暖的世界中，孤身一人。  
+我伸手遮住了荧光灯发出的亮光。隐约看见凸出的血管里，流动的血液。我还活着，还有温度。但现在的我，还能说自己是活着的吗？曾经，记忆被数据化过的我，身处过那冰冷世界的我，还是人类吗？  
 
-“在喜悦的声音中，偶然发现，充满着阴郁表情的铃羽。”  
-“……怎么了，铃羽？”  
-“……为什么，真由理姐姐他们，要出去找食材？明明今天是没有预定的……”  
+听到房门打开的声音，我看过去，真帆站在那里。  
+“比屋定……你不是已经回去了吗？”  
+“有一些东西落在这里了。”  
+“落了东西？”  
+“比起这个，你一个人在这里干什么呢？”  
+真帆甚至都没有要找落下的东西的意思，便径直向我走来，坐在了我的眼前。  
+“你刚才的表情一直糟糕呐，有什么在意的事情吗？”  
+难不成，她是因为担心我而特意回来的？  
+“虽然我可能代替不了红莉栖，但是如果你愿意的话，也可以和我谈一谈。”  
+“比屋定……”  
+根本没必要考虑现在和她说是否合适，之后还要依靠她制作出时间跳跃装置，为此她有必要知道一切。  
+“我接下来要说的事，可能听起来很荒谬，但你愿意听我说吗？”  
+
+“真是的……你这家伙真是……”  
+这是真帆在听完我说的之后的第一句感想。和以前一样，当然不能一下子就相信所有内容，但是，真帆也感受到我认真的态度，耐心地听完了我的讲述。对于不能理解的事情，她会在整理好思路后提出问题。果然对时间跳跃装置和时间机器表现出了浓厚的兴趣，我则尽我所能地对那个系统进行描述。为此，我还带她来到了广播会馆楼顶，给她展示了时间机器。  
+“你能相信么……？”  
+“不信也不行吧，你都用这幅表情说出来了。  
+ 而且……都亲眼看到这种东西了。”  
+“比屋定……”  
+“而且，这样就可以理解了。我之前一直感觉不可思议，  
+ 红莉栖来到秋叶原没几天就去世了，期间居然和你成为了如此亲密的朋友……  
+ 特别是，以那孩子的那种性格，这么短的时间，而且还是和男性，  
+ 怎么可能关系那么好？所以我有想过是不是发生过什么了不得的事情。  
+ 原来是这样啊……”  
+ 真帆小声嘀咕着。  
+“所以呢？你在纠结什么？”  
+真帆用真切耿直的视线注视着我的眼睛。  
+“冈部先生……？”  
+“……我……还是我吗？”  
+“……什么意思？”  
+“你知道的吧？现在我脑中的记忆——  
+ 曾经数据化过，还在硬盘中保存过，说是人工记忆也不为过。  
+ 这样的我，还是我自己吗？能说……我还活着吗……”  
+虽然这幅身体里流淌着血液，但脑中的东西曾经被转换成了 0 和 1。这不就是说，我变成了和『Amadeus』一样的存在了吗？  
+“什么嘛，就为这种事在烦恼啊？傻不傻啊。”  
+然而，真帆对我的烦恼嗤之以鼻。  
+“你知道哲学僵尸吗？”  
+“知道……一个思考实验对吧？貌似是说，外表和一般人类完全相同，但欠缺感情和意识的存在，无法客观地区分他们和一般人类……这样？”  
+虽然很疑惑她为什么突然提出这种问题，我还是不确定地回答了。  
+“嘛，差不多就是这样。”  
+真帆像老师一样满意地点了点头。  
+“那假设，这里有一个外表和人类完全相同的人工智能。  
+ 和人有同样的举止、同样的行动。  
+ 有人遇到困难会出手相助，悲伤的时候会流泪。  
+ 也许这是由一开始的程序所决定的，但人类也是一样的。  
+ 每个人其实也是按照某种固定的程序行动、思考和反应……  
+ 我们只不过是把这种程序，冠以意识、感情等词汇而已。”  
+真帆想说的，我大概明白了。  
+“也就是说，就算是 AI 也是存在感情的吗？”  
+“至少，我们这些科学家为了做出这样的事物，而每天不停地研究哦。”  
+真帆自豪地挺起了胸膛。  
+“那么，冈部先生，你认为拥有感情 AI 不是人吗？”  
+外表、思考方式和人一样，也有感情，那就是——人。  
+“是人……”  
+“对吧？说到底，使一个人成为一个人的，就是记忆哟。  
+ 一个人由诞生，到经历事物，到感知事物，其集合体就被称之为人类。  
+ 所以说冈部伦太郎，即使你的记忆曾数据化过，只要还拥有记忆与身体，  
+ 你就还是一个不折不扣的人类，就还是冈部伦太郎哟。  
+ 不要担心啦。”  
+“比屋定……”  
+“再说，红莉栖制作的那个时间跳跃装置，不也是将记忆数据化后再还原吗？  
+ 那么，你现在烦恼的事不就毫无意义了吗？”  
+未来的桶子也是这么说的。不可思议的是，听到这些话从她口中说出来后，我一直以来的沉重的心情，现在轻快了不少。  
+“……虽然这种时候，红莉栖或许会说些更透彻的话来。”  
+“不……没有这样的事哦，已经足够了……”  
+真帆凭借其脑科学家的见地，给予了我还是我的保障。她的话有着同样的力量——和那个时候，在我背后强力支持着我的红莉栖的话，同样的力量。以前，真帆曾说过——  
+“你是天才，而我说到底不过是萨列里罢了。”  
+这是她对篝脑中的红莉栖的记忆说的话。但是——  
+“比屋定，你并不是萨列里。”  
 “诶？”  
-“不是这样的。确实是今天，昨天晚上来了联络说……”  
-“……糟糕！那是陷阱！大家，现在马上回——”  
-“呀啊！？”  
-“铃羽的话，被扬声器那边的哀叫声盖过了。”  
-“怎么了！？发生什么了！？”  
-“我们被袭击了！敌袭——！”  
-“可恶——！！”  
-“真由理酱！菲莉丝！快点逃！这里由我来处理！”  
-“但是，这样的话琉华喵就！”  
-“我的话没问题的，快！”  
-“不可以，琉华！！”  
-“琉华喵！！！”  
-“爸！”  
-“哦！！”  
-“桶子去追一早就跑了的铃羽。”  
-“等一下，桶子！”  
-“我也一起去！”  
-“……但是，冈伦，你的身体……”  
-“……让我去吧。拜托了……”  
-“桶子稍微停了一下，犹豫了一瞬，马上点了点头，让我扶着他的肩膀。”  
-“虽然桶子的身材比起以前要瘦削了不少，但体格还是那么庞大，我以他的肩膀作为支撑，紧追在铃羽后面。”  
+“你是出色的 Amadeus 啊。”  
+“……”  
+
+是的，现在，我存在于这里。不是在那冰冷黑暗的数据海洋，而是活在此时此地，在此刻存在。真帆的话犹如黑暗中的一盏明灯，让温暖回到了我一直寒冷沉沦的心。可是——**红莉栖她，现在依旧存在于那个世界——那个无机质的，让人打心底里感到寒冷的世界**。她本人去世后，记忆依然存活在那里。并且，存活下来的记忆还要被卷入各种各样的阴谋中。**红莉栖的苦痛，即使失去了肉体，也依然持续着**。不，不止是红莉栖，篝和铃羽也是，还有未来的真由理、菲莉丝、琉华子、桶子他们都是，大家都在痛苦和迷茫中与残酷的命运对抗着，即使如此还在不断前进着。我曾以为，只要真由理活下来了就可以了；我曾想过，就算未来是第三次世界大战，不管世界变得如何，只要真由理能好好活着就足够了；我尝试这样想过，哪怕那个世界尽是血与泪，现在还保持着安稳就星了。我以为我是明白的，不管是铃羽描述的悲惨的、残酷的未来，还是和桶子、铃羽一起战斗的日子，这一切我一直以为我是明白的。拔枪射击手染鲜血却依旧淡漠的铃羽，瘦削、面无血色的真由理与菲莉丝，躺在我怀里不会再动的琉华子，被世界玩弄的篝一行人……亲身实际接触过后，我才终于明白了，**我只是装作自己明白，其实一直在逃避**。反正我会在 2025 年死去——就这样蒙蔽了自己的双眼。可是——2025 年，我并没有死。**只是我的死作为“事实”被大家认知了而已**。所有人都被欺骗了。没错，被欺骗了。包括过去的我，和未来的大家，**世界被——欺骗了**。**本以为被确定的未来，其实还有别的样子**。  
+我又想起了在未来，桶子转述给我的，2025 年的我说的话：  
+“寻找 *STEINS;GATE* 这条世界线的道路是凶险的。  
+ 只是重复一次两次，是不可能找到方法的吧。  
+ 但是，  
+ 从那时开始，我们做的所有事情，不是都会成为通往命运石之门的道路吗——  
+ 无数的未来，不是都与过去连接在一起吗——**  
+ 所以，  
+ 我们现在所处的世界，并不是无用的，一定也是必要的。  
+ 至少现在的我是这么认为的。”  
+14 年后的我凭借什么想到了这些，现在的我还不知道。但有一件事是可以确定的——那时的我，肯定预料到了这一天。那么，就相信他说的话吧。**如果那样的 2036 年也是必要的未来，那么将“红莉栖”从数据世界解放出来，也应该是必要的未来**。虽然道路艰险，但首先要做的，就是踏出第一步，现在的我所需要的那一步。  
+
+“比屋定。”  
+“怎么了？”  
+“在回美国之前，再稍微多陪我一段时间吧。”  
+“……也好呢，不过我有两个条件。”  
+“条件……？”  
+“第一个是，我想要调查这台时间机器。”  
+“……另一个呢？”  
+“是关于你的，让我称呼你为‘冈伦先生’，而你要称呼我为‘真帆’。”  
+“啊……？”  
+“不错的条件吧？”  
+说着这句话的真帆，脸上露出了以前从未见过的单纯的笑容。  
+“……我知道了，真帆。”  
+“请多指教，冈伦先生。”  
+她的小手握住我的手，传来了真切的温暖。  
 
 
 <br/>
