--- a/article/sg0/doc/0129.md
+++ b/article/sg0/doc/0129.md
@@ -1,127 +1,154 @@
 # 盟誓的文艺复兴 - 07
 > 1.055821  
-> [ 2036/03/07 ] 冈伦赶到现场。琉华子为保护众人重伤，在冈伦怀中去世。至死他都想再见冈伦一面，一直以为自己被排除在外，想要成为冈伦真正的伙伴。冈伦终于亲身体验到了自以为知道却始终没有正视的 β 世界线未来战争的地狱，意识到了自己的一直以来的自以为是与自我欺骗，实际上谁都没能拯救，只有自己得救了。  
+> [ 2011/01/31 ] 凤凰院凶真的复活！！与动画 21 集不同，在场成员是 LABMem 全体，“世界修正拳”不是桶子，而是铃羽揍的。  
 
 | [←prev](./0128) | [menu](../) | [next→](./0130) |
 
 ---
 
-“在桶子的支撑下走了一段时间，看见了几个人影。”  
-“或许在那里，正在进行着激烈的战斗——虽然做好了这样的觉悟，但周围却一片寂静。”  
-“在对面的方向，有几个像是士兵一样的人倒在地上。”  
-“铃羽站在前方。”  
-“在她旁边蹲着的，还有两个女人。”  
-“然后，在她们的脚旁——”  
-“唔……”  
-“琉华……子……”  
-“只要看一眼就明白了。”  
-“在那里躺着的琉华子。”  
-“……冈…伦……？”  
-“窥视着倒在地上的琉华子的两人，把脸庞抬了起来。”  
-“冈伦……琉华喵……琉华喵他……”  
-真由理和菲莉丝，都是一副饱经时光的憔悴的样子。  
-“啊……啊……”  
-“冈部……先生……？”  
-“虽然变得精悍了许多，但那幅柔和的像女性一样的脸庞还是没有变。”  
-“琉华子目光的焦点聚在了我身上。”  
-“琉华子……”  
-“真的是…冈部先生……么？”  
-“啊啊……琉华子……是我……”  
-“嘿嘿……这种称呼方式……看来是真的冈部先生了……咳！”  
-“咳嗽的琉华子嘴边，留下了鲜红的血。”  
-“琉华子右胸流出的血染红了衣服，并在地面上扩散开来。”  
-“一看就知道是致命伤。”  
-“太好了……刚刚的话……看来不是，骗人的呐……”  
-“啊啊……多亏了你们，我才能这样醒来…谢谢……”  
-“琉华子的手像是要抓住什么的样子伸向空中。”  
-“也许在他的眼中，已经看不到我的身影了。”  
-“和我握着的手，以惊人的速度冷了下来。”  
-“冈，部……先生……”  
+我和真帆回到 LAB，然后将全员又召集了回来。  
+“怎么了喵，冈伦？之前都解散了，为什么又特意叫我们回来呢喵？”  
+“就是啊冈伦，我离这又不是很近，有什么话，还希望你能在解散之前说啊。”  
+“所以说，要说什么呢，冈伦？”  
+“是不能在 RINE 和电话里说的事吗，冈部先生？”  
+“啊啊，在此之前，铃羽——”  
 “怎么了？”  
-“我……做到了……”  
-“啊啊……”  
-“多亏了……凶真先生教的……清心斩魔流……才能，保护真由理酱…与大家……”  
-“啊，嗯……”  
-“我……成为了……伙伴，是吧……？”  
-“成为了……大家……真正的伙伴，是吧…..？”  
-“笨蛋……你从一开始就一直是……我们的伙伴啊……”  
-“琉华子冰冷的手伸了过来，碰到了我的脸颊——”  
-“然后露出了灿烂的笑容。”  
-“……诶嘿嘿……真是高兴啊……”  
-“说着这样的话。”  
-“霎时。”  
-“脸上的触感消失了。”  
-“琉华子！琉华子！？”  
-“琉华…君…？”  
-“冰冷的手就这么落在了满是瓦砾的地面上。”  
-“啊……啊……”  
-“琉华喵！！！”  
-“就这样不再动弹。”  
-“啊……啊……”  
-“怎么……会这样……”  
-“……太好了。琉华君，一直就想见冈伦呢。最后能见上一面，真的是，太好了……”  
-“太好了……？”  
-“说这太好了……？”  
-“这种结局 ……？”  
-“真由理的这句话，终于让我知道在我沉睡的这 25 年里他们到底经历了多么残酷的，犹如地狱般的时间。”  
-“漆原琉华……刚刚你的战斗，真的很出色……我们，被你救了……谢谢你，请安息吧……”  
-“…………”  
-“咕……这种，这种事情，太过分了……”  
-“唔，啊啊啊啊啊啊啊啊……!。”  
+“想问一件事，你是怎么看我的？”  
+“怎么……是指？”  
+“等等，冈伦……你不会！  
+ 就、就算是冈伦，我也不会把铃羽交给你的哟！  
+ 作为父亲我无法认可！不行，绝对不行！”  
+我无视了完全误会了的桶子，望向铃羽。  
+“这半年来，你也一直看着我的状况。  
+ 在此基础上，你心里是怎么看我的？  
+ 我想请你坦诚地告诉我……”  
+“实话实说吗？”  
+“啊……”  
+“……说实话，看着就来气。”  
+还真是耿直啊，我不由得苦笑。  
+“不只是我和爸爸，真由姐、留未姐、琉华哥、篝她们也……  
+ 在未来的世界，大家不知道有多么辛苦。  
+ 不知道明天是否还活着，也许会像母亲一样被残忍杀害。  
+ 在那种世界里，大家都拼命地活着。  
+ 然而，你却尽说着自己多辛苦这样的泄气话……”  
+铃羽嘴巴一张开，就好像开启了阀门，指责的话滔滔不绝。她一定对我一直以来这种犹豫不决的态度积愤已久了吧。  
+“当然，我知道冈伦叔叔有过非常痛苦的经历。  
+ 也知道你遇到过无数的困难，因此没有办法振作起来。  
+ 即使如此，我们除了冈伦叔叔以外，没有可以依靠的人了啊……”  
+铃语略低着头，握紧拳头咬紧牙关。”  
+“如果我和爸爸能够代替叔叔承担起责任的话，什么事都会去做！  
+ 无论会有怎样痛苦的回忆，无论有怎样困难在等着，就算这样也什么都会去做！”  
+“铃羽……”  
+“可是，我们毫无办法……不是冈伦叔叔的话就什么也做不到……”  
+铃羽突然抬起头，脸上满溢着至今为止一直压抑着的复杂感情。  
+“可是叔叔却总是说着不行啊、做不到啊、饶了我吧这种泄气话，连别人的话都听不进去！”  
+ 虽然在爸爸的面前什么都没有说，但是我对叔叔那样的态度一直特别火大！  
+ 真的是，火大到想要狠狠地揍你一顿！”  
+“……呵。”  
+在本人面前说到这种地步，也算是痛快了。  
+“铃、铃羽……不管怎么样也不用说到这个地步……”  
+“是啊喵，冈伦他应该也是知道的喵。”  
+是啊，我是知道的。我必须要想办法做点什么，这种事我还是知道的。  
+“那么……就这么做吧。”  
+“这么做……什么？”  
+“你不是很想揍我吗？那就揍我一顿吧！”  
+“诶……可是……”  
+“不用顾虑。”  
+“铃……铃小姐，不要……冈伦他……”  
+“没关系的，真由理。”  
+这是我给的交代，是对铃羽的，对未来的世界的，也是对我自己的。  
+“冈伦叔叔……”  
+“莫、莫非……你有那种性癖？那我倒是不会阻止……”  
+“真的可以吗？”  
+铃羽向我逼近了一步。  
+“啊……！”  
+“我已经做好觉悟了。  
+“那……我就认真上了。”  
+“诶？啊、不、等等……稍微手下留情——”  
+“嘿！！！”  
+“咕啊——！！”  
+我被她毫不留情抡起的拳头给打飞了。  
+“啊、对不起，稍微用力过度了……”  
+“刚刚可是发出了不得了的声音哦？”  
+“没、没事吧，冈伦！？”  
+真由理她们慌张地过来探头看我的脸色。的确，非常痛，大脑可能受到了比 *Reading·Steiner* 或时间跳跃时更加严重的伤害。可是——  
+
+​<audio id="audio" controls="" preload="none">
+      <source id="mp3" src="../static/sound/bgm/bgm219nl-ReAwake.ogg">
+</audio>
+
+“哈……”  
+“冈部、先生……？”  
+多亏这一拳，我清醒过来了。  
+“哈哈哈——”  
+我只要去做我能做到的事情就行了。  
+“哈哈哈哈哈——”  
+“冈……伦……？”  
+“**呼哈哈哈哈哈！！！**”  
+“难、难道……是凶真？”  
+“冈伦……”  
+“你说错了哦，真由理……我是，凤凰院……凶真……！”  
+“凶真师傅！”  
+“没错！  
+ **我的名字是凤凰院凶真！！！！**  
+ **LABMem No. 001，这个 LAB 的创立者——**  
+ **渴望着混沌，欲图颠覆世界支配构造的 *Mad Scientist*——**  
+ **凤凰院凶真！！！！**”  
+“琉华子！！”  
+“是、是！！”  
+“拿白大褂来！”  
+“是、是！冈……凶真师傅！！”  
+“凶真……凶真复活了喵！！”  
+“爸、爸爸……这是？”  
+“做得好铃羽，冈伦终于有干劲了！”  
+“凶真师傅，给。”  
+“唔呣！”  
+好久没有穿过的白大褂，因为在开发室的架子上沉睡了太久，已经有了一点霉味。  
+“对，就是这个！这才是我神圣的白银铠甲！  
+ 于此时此刻，凤凰院凶真复活了！  
+ 我从漫长的沉睡中苏醒过来了！  
+ 呼哈哈哈哈哈哈哈！！！！”  
 
 ![](../static/image/0129-1.png)
 
-“真由氏怎么样了？”  
-“因为哭累了正在睡着呢。”  
-“没办法啊。真由氏和琉华氏一直都是很好的朋友……”  
-“唔……琉华哥！”  
-“琉华子……死了。”  
-“为了保护真由理和菲莉丝，不幸地去世了。”  
-“唔……!。”  
-“他的死亡，与真由理的死亡重叠在了一起。”  
-“在我手中不断冰冷下来的真由理。”  
-“然后是琉华子。”  
-“无论到哪里都是这样。”  
-“真由理也是。”  
-“琉华子也是。”  
-“然后红莉栖也是。”  
-“大家都死了。”  
-“因为这个战争，非常多的人死去了。”  
-“小学的朋友，初高中的朋友，还有大学的朋友……”  
-“亲戚，老师，认识的人，大人和小孩们，还有……最重要的人……”  
-“…………唔。”  
-“非常多的……真的是非常多的人死去了……”  
-“我知道的。”  
-“不——我一直都认为自己是知道的。”  
-“如果不找到命运石之门的话。”  
-“在 β 世界线的话，全世界会被战火所包围。”  
-“这是听说过无数次的事了。”  
-“那会是一个怎么样的未来，我一直以为自己知道。”  
-“但那只不过是，遥远的未来罢了。”  
-“没有一点的现实感。”  
-“有的，只是幻想。”  
-“在那里有的只是是没有半点现实感的，漠然的想像。”  
-“曾经被我数百次，数千次经历的噩梦。”  
-“我原以为没有比那再糟糕的地狱了。”  
-“但是像这样，亲眼看到，亲耳听到，亲身体会的现在，让我知道了那些都只是幻想。”  
-“堆积如山的死尸。”  
-“成群饥不择食的野狗。”  
-“倒下的士兵。”  
-“烟熏过的肉味。”  
-“腐烂的内脏味。”  
-“现在仍然残留在手上的，琉华子的血的温度。”  
-“真由理的血的温度。”  
-“红莉栖的血的温度。”  
-“我想着只要去救真由理。”  
-“对红莉栖见死不救，逃避现实，我以为救到了真由理他们。”  
-“但是，到最后我谁也没能救到。”  
-“要说有谁获得拯救的，只有我自己罢了。”  
-“自己，只有自己得救了。”  
-“别人谁都没救到。”  
-“红莉栖也是。”  
-“真由理也是。”  
-“篝也是，琉华子也是。”  
-“谁都没能救到。”  
+对于我的突然改变，第一次见到凤凰院凶真的篝和真帆都呆住了。  
+“……这、这是什么？被揍了冲击太大所以整个人变得奇怪起来了！？”  
+“我……想起来了……”  
+“诶？”  
+“凤凰院凶真……妈妈一直在说的名字……  
+ 总有一天，凤凰院凶真会复活……照亮我们的未来……”  
+“……不，我有点跟不上你说的话。”  
+“喂，那边的萝莉娘！”  
+“……嗯？”  
+“说你呢，就是你！”  
+“等等！你不会是在说我吧？”  
+“在这里要说萝莉娘，除了你就没别人了吧。”  
+“谁是萝莉娘啊，我才不是！！”  
+“我现在授予你 **LABMem No. 009** 的荣誉！  
+ 今后，允许你作为我凤凰院凶真的部下，参加我们的作战计划！”  
+“为什么我一定要成为你的部下啊，还有那个 LABMem Number 是什么鬼！？”  
+“顾名思义，就是被选为这个 LAB 的正式成员的证明。感到光荣吧！”  
+“说什么光荣……”  
+“接下来，椎名篝！”  
+“呼诶！？”  
+“你也是，**LABMem No. 010**，明白了吗？”  
+“是、是！！”  
+“等等，凶真！菲莉丝和琉华喵不能成为 LABMem 喵？”  
+“嗯……？”  
+菲莉丝和琉华子正用不满的眼神看着我。说起来，认定他们两个为 LABMem 是在 α 世界线，而不是在这条世界线。  
+“我没说过吗？你们当然已经是 LABMem 了！  
+ 琉华子是 **006**，菲莉丝是 **007**，然后铃羽是 **008**！明白了吗？”  
+“是、是！”  
+“太棒了喵！”  
+“……虽然不太明白，不过了解了。”  
+“话说冈伦，那不是很奇怪吗？这样的话，004 和 005 不就空缺了吗？”  
+“这两个号码已经有预约了。”  
+红莉栖和萌郁——将萌郁留作 LABMem 的一员，说实话我还有点抵触。但总有一天，为了抵达连她也能被认同的世界线，我要敢于直面过去。我是这样决定的。  
+
+“那么趁现在大家都集齐了，我再重新宣言一遍！  
+ 以今天，2011 年 1 月 31 日为起点，启动新的作战！  
+ 目标是，粉碎既定的未来！颠覆世界的未来！  
+ 这就是我们的目的！明白了吗！！”  
 
 
 <br/>
