update 0129 - js test

--- a/article/sg0/doc/0129.md
+++ b/article/sg0/doc/0129.md
@@ -73,9 +73,22 @@
 “没、没事吧，冈伦！？”  
 真由理她们慌张地过来探头看我的脸色。的确，非常痛，大脑可能受到了比 *Reading·Steiner* 或时间跳跃时更加严重的伤害。可是——  
 
-​<audio id="audio" controls="" preload="none">
-      <source id="mp3" src="../static/sound/bgm/bgm219nl-ReAwake.ogg">
+
+<a href="#" class="sound" id="reawake">BGM: ReAwake</a>
+​<audio id="myAudio" preload="none">
+      <source id="ReAwake" src="../static/sound/bgm/bgm219nl-ReAwake.ogg">
 </audio>
+<script>
+    // 获取链接和音频元素
+    var audioLink = document.getElementById('reawake');
+    var audioElement = document.getElementById('myAudio');
+    // 在链接点击时触发事件
+    audioLink.addEventListener('click', function() {
+        // 播放音频
+        audioElement.play();
+    });
+</script>
+
 
 “哈……”  
 “冈部、先生……？”  
