--- a/article/sg0/doc/0129.md
+++ b/article/sg0/doc/0129.md
@@ -73,23 +73,6 @@
 “没、没事吧，冈伦！？”  
 真由理她们慌张地过来探头看我的脸色。的确，非常痛，大脑可能受到了比 *Reading·Steiner* 或时间跳跃时更加严重的伤害。可是——  
 
-
-<a href="#" class="sound" id="reawake">BGM: ReAwake</a>
-​<audio id="myAudio" preload="none">
-      <source id="ReAwake" src="../static/sound/bgm/bgm219nl-ReAwake.ogg">
-</audio>
-<script>
-    // 获取链接和音频元素
-    var audioLink = document.getElementById('reawake');
-    var audioElement = document.getElementById('myAudio');
-    // 在链接点击时触发事件
-    audioLink.addEventListener('click', function() {
-        // 播放音频
-        audioElement.play();
-    });
-</script>
-
-
 “哈……”  
 “冈部、先生……？”  
 多亏这一拳，我清醒过来了。  
@@ -102,8 +85,13 @@
 “冈伦……”  
 “你说错了哦，真由理……我是，凤凰院……凶真……！”  
 “凶真师傅！”  
+
+​<audio id="myAudio" controls="" preload="none">
+    <source id="ReAwake" src="../static/sound/bgm/bgm219nl-ReAwake.ogg">
+</audio>
+
 “没错！  
- **我的名字是凤凰院凶真！！！！**  
+ **吾名为凤凰院凶真！！！！**  
  **LABMem No. 001，这个 LAB 的创立者——**  
  **渴望着混沌，欲图颠覆世界支配构造的 *Mad Scientist*——**  
  **凤凰院凶真！！！！**”  
@@ -146,9 +134,9 @@
 “呼诶！？”  
 “你也是，**LABMem No. 010**，明白了吗？”  
 “是、是！！”  
-“等等，凶真！菲莉丝和琉华喵不能成为 LABMem 喵？”  
+“等等，凶真！我们俩不能成为 LABMem 喵？”  
 “嗯……？”  
-菲莉丝和琉华子正用不满的眼神看着我。说起来，认定他们两个为 LABMem 是在 α 世界线，而不是在这条世界线。  
+菲莉丝和琉华子正用不满的眼神看着我。说起来，认定他们俩为 LABMem 是在 α 世界线，而不是在这条世界线。  
 “我没说过吗？你们当然已经是 LABMem 了！  
  琉华子是 **006**，菲莉丝是 **007**，然后铃羽是 **008**！明白了吗？”  
 “是、是！”  
