--- a/article/sg0/doc/0000.md
+++ b/article/sg0/doc/0000.md
@@ -1,13 +1,8 @@
-# 命运石之门 0 游戏文本
-# STEINS;GATE 0
-
-![](../static/image/0000-0.png)
-
 # 序章
 > 1.129848  
 > [ 2010/07/28 ] 接动漫 *23β* 话，冈伦误杀红莉栖后。  
 
-| ←prev | [menu](../) | [next→](./0001) |
+| [menu](../) | [next→](./0001) |
 
 ---
 
@@ -129,4 +124,4 @@
 > (to be continued)
 ---
 
-| ←prev | [menu](../) | [next→](./0001) |
+| [menu](../) | [next→](./0001) |
