--- a/article/sg0/doc/0048.md
+++ b/article/sg0/doc/0048.md
@@ -1,4 +1,4 @@
-# 私秘境里的圣痕 - 12
+# 私秘境里的污点 - 12
 > 1.143688  
 > [ 2011/07/08 ] 冈伦被救出；篝去世，『Amadeus』被删除；桶子、菲莉丝、琉华逃亡；真由理、铃羽、真帆失踪。冈伦放弃之下，桶子决心造出时间机器。  
 
