--- a/article/sg0/doc/0113.md
+++ b/article/sg0/doc/0113.md
@@ -1,4 +1,4 @@
-# 相互再归的鹅妈妈 - 01
+# 相互回归的鹅妈妈 - 01
 > 1.064756  
 > [ 2011/01/15 ] 接 0112 - 拒绝接听。但篝，或者是红莉栖的意志，替他按下了接听键。更改后的世界线里，没有危机发生，但篝只有最近时间的记忆，丢失了其他全部记忆，所以也没有和真由理相认，只有冈伦、桶子、铃羽知道全部真相。这条线的 LAB 为了篝恢复记忆在行动。篝听到真由理哼唱的《星之奏》晕倒。  
 
