--- a/article/sg0/doc/0115.md
+++ b/article/sg0/doc/0115.md
@@ -1,4 +1,4 @@
-# 相互再归的鹅妈妈 - 03
+# 相互回归的鹅妈妈 - 03
 > 1.064756  
 > [ 2011/01/15 ] 去 MayQueen 找真由理，得知是从铃羽那听来的；铃羽参加 GOGO 咖喱大胃王夺冠，表示是小时候从由季那里听来的。目前的链条：篝 <- 真由理 <- 铃羽 <- 由季。  
 
