--- a/article/sg0/doc/0117.md
+++ b/article/sg0/doc/0117.md
@@ -1,4 +1,4 @@
-# 相互再归的鹅妈妈 - 05
+# 相互回归的鹅妈妈 - 05
 > 1.064756  
 > [ 2011/01/15 ] 几人意外被发现，约会结束。从由季处得知她是从点心培训班的学员那里听来的，结果发现正是冈伦母亲。然后母亲表示是从初中的凶真那里听来的。初中真由理因爷爷去世抑郁的时期，冈伦中二病发凶真诞生，而后每次洗澡都会唱。冈伦毫无印象，众人决定第二天去扫墓顺便调查。目前的链条：篝 <- 真由理 <- 铃羽 <- 由季 <- 冈伦母亲 <- 初中凶真。  
 
