--- a/article/sg0/doc/0119.md
+++ b/article/sg0/doc/0119.md
@@ -1,4 +1,4 @@
-# 相互再归的鹅妈妈 - 07
+# 相互回归的鹅妈妈 - 07
 > 1.064756  
 > [ 2005/06/30 篝视角 ] 大雨天，篝从『教授』处出逃，失落的她遇上了同样失落的少年，给他唱了《星之奏》。少年离开后她被『教授』找到，逃离时同样冲上了机动车道，差点被卡车撞到。  
 
