--- a/article/sg0/doc/0046.md
+++ b/article/sg0/doc/0046.md
@@ -1,4 +1,4 @@
-# 私秘境里的圣痕 - 10
+# 私秘境里的污点 - 10
 > 1.143688  
 > [ 2011/07/07 真帆视角（上） ] 真帆洗脑状态负面爆发。朦胧确认对冈伦好感；为了伤害真由理告知其 α 世界线情报；秋叶原车站出现外国军队；篝出现，疑似认识真帆。  
 
