瓦尔基里最终报告 --> 瓦尔基里报告 STEINS;GATE --> Steins;Gate

--- a/article/sg0/doc/0041.md
+++ b/article/sg0/doc/0041.md
@@ -93,13 +93,13 @@
 “那家伙……在监视这个 LAB。”  
 半年前在广播馆屋顶上穿着紧身衣监视铃羽，被她发现追赶后却逃之夭夭的人，绝对是篝。从那之后，铃羽一直集中心思保护时间机器，附近再也没有发现类似篝的人物——铃羽压根就没想过，篝在监视 LAB。
 “不，稍微考虑一下的话这也是当然的事情。  
- 那家伙，在阻止我们到达 STEINS;GATE。  
+ 那家伙，在阻止我们到达 Steins;Gate。  
  她不想把这个世界变成没有发生过。  
  也就是说，不止是我，爸爸你也被盯上了……？”  
 “诶？我？”  
 “不过，我觉得你应该没有……生命危险。  
  如果相信世界线的真理，你至少会活到 2036 年。  
- 但是，为了阻止到达 STEINS;GATE，她也可能妨碍你的研究。”  
+ 但是，为了阻止到达 Steins;Gate，她也可能妨碍你的研究。”  
 最近在父亲，还有冈部伦太郎身边，总是接二连三地发生各种事件。父亲说不定成为了篝的目标。  
 “从今天起，以防万一，我不在的时候要把门上锁啊。”  
 “嗯、嗯。知道了哦。”  
