--- a/article/sg0/doc/0049.md
+++ b/article/sg0/doc/0049.md
@@ -1,4 +1,4 @@
-# 瓦尔基里最终报告 - 教授结局
+# 瓦尔基里报告 - 教授结局
 > 1.143688  
 > [ 2036/08/13 ]  
 
@@ -62,7 +62,7 @@
   - 吹雪记得在其他世界线的经历
   - 『教授』在收集新型脑炎患者
 
-## STEINS;GATE 达成条件
+## Steins;Gate 达成条件
 - ■■■■■■■■■■■■■
   - ■■■■■■■■■■
   - 破坏红莉栖的笔记本电脑和移动硬盘
