--- a/article/sg0/doc/0093.md
+++ b/article/sg0/doc/0093.md
@@ -1,4 +1,4 @@
-# 瓦尔基里最终报告 - 真帆结局
+# 瓦尔基里报告 - 真帆结局
 > 1.081163  
 > [ 2036/08/13 ]  
 
@@ -66,7 +66,7 @@
     - “我们一定能够到达那个地方。”
     - “凤凰院凶真，就拜托你了！”
 
-## STEINS;GATE 达成条件
+## Steins;Gate 达成条件
 - ■■ 红莉栖的时间机器相关论文
   - ■■■■■■■■■■
   - ■■ 红莉栖的笔记本电脑和移动硬盘
