--- a/article/sg0/doc/0122.md
+++ b/article/sg0/doc/0122.md
@@ -1,4 +1,4 @@
-# 瓦尔基里最终报告 - 篝结局
+# 瓦尔基里报告 - 篝结局
 > 1.064756  
 > [ 2036/08/13 ]  
 
@@ -73,7 +73,7 @@
   - 篝 <- 真由理 <- 铃羽 <- 由季 <- 冈伦母亲 <- 初中凶真 <- 篝
   - 是鼓励最喜欢的人的歌
 
-## STEINS;GATE 达成条件
+## Steins;Gate 达成条件
 - ■■ 红莉栖的时间机器相关论文
   - ■■《中钵论文》的红莉栖原本
   - ■■ 红莉栖的笔记本电脑和移动硬盘
