--- a/article/sg0/doc/0053.md
+++ b/article/sg0/doc/0053.md
@@ -37,7 +37,7 @@
 “很难懂的话题是指，宗教那一类的？”  
 琉华子的家是柳林神社，很早以前就存在于秋叶原的神社，琉华子的父亲是那边的宫司。  
 “似乎不是关于这类的……和这之前的客人都是在说些什么，有明怎么怎么样，晴海怎么怎么样的……像这种话题。”  
-“<abbr title="皆为 CM 活动举办地。自 1981 年的 C19 起，该活动的举办会场就固定在晴海；而在 1996 年 C49 之后，会场迁移到了有明。所以琉华子的爸爸是个老二次元了。顺带一提，在《S;G MDE》的琉华子线，凶真和琉华子找到了琉华子父亲年轻时写的一份卷轴，上面详细记载了如何屠龙。——摘自 B 站·Serika Onoe 的《杂谈(二)--STEINS;GATE 0 里的科学 ADV 彩蛋》">晴海……有明……</abbr>”  
+“<abbr title="皆为 CM 活动举办地。自 1981 年的 C19 起，该活动的举办会场就固定在晴海；而在 1996 年 C49 之后，会场迁移到了有明。所以琉华子的爸爸是个老二次元了。顺带一提，在《S;G MDE》的琉华子线，凶真和琉华子找到了琉华子父亲年轻时写的一份卷轴，上面详细记载了如何屠龙。——摘自 B 站·Serika Onoe 的《杂谈(二)--Steins;Gate 0 里的科学 ADV 彩蛋》">晴海……有明……</abbr>”  
 这些关键词莫非……  
 “真不愧是琉华氏的爸爸。真可怕。”  
 “冈部先生和桥田先生，能明白吗？”  
