--- a/article/sg0/doc/0097.md
+++ b/article/sg0/doc/0097.md
@@ -61,10 +61,10 @@
 “让它……改变……”  
 真由理一直都对篝这样说。对篝来说是微弱的希望之光。  
 “那个什么……什么来着……Stein……什么的。”  
-“STEINS;GATE 吗？”  
-“对，就是这个！STEINS;GATE 一定存在，妈妈是这么说的。”  
+“Steins;Gate 吗？”  
+“对，就是这个！Steins;Gate 一定存在，妈妈是这么说的。”  
 “……话是这么说，它是个什么，我也不太明白，诶嘿嘿——”  
-STEINS;GATE——这个词的意思，说实话篝并不明白。尽管如此，真由理只要说这句话，心就暖和起来了。引领我们通向 STEINS;GATE 的人一定会出现，如此想着，明天就会充满希望。  
+Steins;Gate——这个词的意思，说实话篝并不明白。尽管如此，真由理只要说这句话，心就暖和起来了。引领我们通向 Steins;Gate 的人一定会出现，如此想着，明天就会充满希望。  
 
 ![](../static/image/0097-2.png)
 
