--- a/article/sg0/doc/0000.md
+++ b/article/sg0/doc/0000.md
@@ -7,8 +7,8 @@
 ---
 
 舱门开启了，耀眼的光芒照射进我的眼睛。这里是哪里？我眯起眼睛，勉强看到的，是夏天的晚霞。  
-不想从这里出去……  
-真想就这样消失……  
+（不想从这里出去……）  
+（真想就这样消失……）  
 然而——我被抓住手腕，强硬地拽了出去。  
 
 ![](../static/image/0000-1.png)
@@ -18,8 +18,8 @@
 听到了熟悉的称呼，但是我已经没有力气做出反应，像是马上要倒地一样蹲坐着。  
 “冈伦！”   
 真由理跑过来，担心地看着我的脸。但是，现在的我连去在意这些都觉得麻烦。  
-别跟我这种人说话……  
-让我一个人待会儿……  
+（别跟我这种人说话……）  
+（让我一个人待会儿……）  
 
 “喂，冈伦，你怎么浑身是血啊？发生了什么？！”  
 “爸爸，快去拿水和毛巾来，还有衣服！”  
@@ -29,12 +29,16 @@
 桶子慌张地跑向楼顶门的方向。  
 “冈伦，你没事吧……？振作点，不要死啊……”  
 “没事的真由姐，叔叔并没有受伤。”  
-别这样！别来管我这种人！让我一个人待着！我没能拯救她——反而，**亲手夺去了她的生命**。在三周前的这个地方，是我，杀了她……我是，杀人犯。  
+（别这样！）  
+（别来管我这种人！）  
+（让我一个人待着！）  
+我没能拯救她——反而，**亲手夺去了她的生命**。在三周前的这个地方，是我，杀了她……我是，杀人犯。  
 
 “没用的……不管什么方法，都是没用的……  
  哈、哈哈哈……一切，都早已注定了……  
  一样的……跟真由理那时，是一样的……  
- 无论如何挣扎……结果都，是一样的……”  
+ 无论如何挣扎……结果都，是一样的……  
+ 我果然，无法……拯救红莉栖……”  
 **无论重来多少次，肯定都会收束成同样的结果**。与过程无关，不管是时间跳跃还是时间旅行，都不可能改变过去的结果。这一残酷的事实，我明明已经知道了。没想到会这样，以最痛苦的形式再次切身感受。  
 “没用的……没用的啊……无论如何都是没用的啊！   
  我明白的……一开始就明白的……  
@@ -83,9 +87,9 @@
  已经，不用拼命了哦。  
  就算哭出来也可以哟，冈伦。  
  真由喜会一直在你身边的，冈伦。”  
-不知是不是因为真由理温柔的话语，我的眼泪终于肆意涌了出来。  
-我下定决心，要忘记这一切。  
-所以从那天起，我就再也没有去过 LAB ——未来机械研究所。  
+不知是不是因为真由理温柔的话语，我的眼泪终于肆意涌了出来。我下定决心，要忘记这一切。  
+
+所以从那天起，我就再也没有去过 LAB——未来机械研究所。  
 
 
 <br/>
