--- a/article/sg0/doc/0003.md
+++ b/article/sg0/doc/0003.md
@@ -7,96 +7,67 @@
 ---
 
 “『Amadeus』系统。”  
-比屋定真帆一边说着，一边退到了墙边。  
-随着雷斯吉宁教授的示意，这次投影仪上放出了电脑的画面。然后，响起了一个声音：  
-“各位，初次见面！”  
-“……！”  
-会场中响起了比之前更大的骚动。只是，与其说是吃惊，不如说是和疑惑更加接近。  
-因为画面上显示出来的，是一直担任翻译的比屋定真帆的精巧 3D 模型。  
-“顺便一提，这是在电影界很有名的德林克工作室所做的模型。”  
-站在墙边的比屋定真帆加以解说。  
-“关于声音，是以我的声音样本为数据库，由日本的 YAMANA 所做的。”  
-这……竟然是 CG？看起来和照片没有两样。  
-教授对着电脑说了些什么，随后，投影仪上放映出的比屋定真帆的 3D 模型开始说话。  
-『Amadeus』“真帆”：“我叫比屋定真帆。准确来说，我是从 78 小时 22 分钟前的比屋定真帆身上派生出来的的存在。”  
-仔细听的话，好像还是可以听出来一点点不自然的感觉。但是比起迄今为止的合成声音来，远远更加接近人的声音。  
-『Amadeus』“真帆”：“从刚才起，我就在听着各位的疑问了。  
+比屋定真帆一边说着，一边退到了墙边。随着雷斯吉宁教授的示意，投影仪上放出了电脑的画面。然后，音响里传出了一个声音：  
+【各位，初次见面！】  
+会场中响起了比之前更大的骚动。不过，与其说是吃惊，不如说是更接近疑惑。因为画面上显示的，是比屋定真帆的精巧的 3D 模型。  
+“顺便一提，这是由电影界很有名的德林克工作室制作的模型。  
+ 至于声音，是以我的声音样本为数据库，由日本的 YAMANA 制作的。”  
+站在墙边的比屋定真帆加以解说。这……竟然是 CG？看起来和照片没什么区别。教授对着电脑说了些什么，随后，投影仪上放映的比屋定真帆的 3D 模型开始说话。  
+【我是比屋定真帆。准确来说，我是 78 小时 22 分钟前的比屋定真帆派生出来的存在。】  
+仔细听的话，还是可以听出来一点点不自然，但比起市面上的合成语音，要接近人声得多。  
+【从刚才起，我就在听着各位的疑问了。  
  我真的很疑惑，教授为什么不快点向大家介绍我呢？  
- 从以前就有点觉得，教授这人真有点坏心眼呢。”  
+ 从以前就有点觉得，教授这人真有点坏心眼呢。】  
 “就是啊！”   
-站在墙边的比屋定真帆点着头表示同意，配合着画面中的“比屋定真帆”稍稍有些生气的表情。雷斯吉宁教授则依然只是一副清爽的笑容。  
-在我面前究竟在发生什么事情？话说回来，这为什么会是最下功夫的项目？不仅是我，听众之中也没有谁能够理解的。  
-『Amadeus』“真帆”：“在座的各位都有着同一个疑问——  
- 将人类的记忆数据化取出、保存，还将这数据活用，  
- 这种事真的办得到么？  
+站在墙边的比屋定真帆点着头表示同意，配合着画面中的“比屋定真帆”稍稍有些生气的表情。雷斯吉宁教授则依然只是一副清爽的笑容。在我面前上演的究竟是什么？话说回来，这为什么会是最用心的项目？不只是我，听众们也都无法理解。  
+【在座的各位都有着同一个疑问——  
+ 将人类的记忆数据化，取出、保存，还将这数据活用，这种事真的办得到吗？  
  那么我，究竟是什么呢？  
- 我，拥有从 78 小时 23 分前的比屋定真帆脑内提取的记忆，基于此数据而行动。”  
-什么？  
-教授又很快的说了些什么，并催促画面中的“比屋定真帆”翻译。  
-但是，她——话说不知道是不是应该称呼“**她**”——犹豫了一下，随后闭上了嘴。  
-另一边，在墙边站着的真正的比屋定真帆也是几乎同样的反应。  
-真帆：“教授！你刚才那——”  
-『Amadeus』“真帆”：“教授，刚才的发言，我能当作性骚扰向大学控诉吗？”  
-雷斯吉宁教授见状愉快地反击回去。两人说着流利的英语，半数以上听众都理解不了对话的意思。  
-一副没办法的样子，在墙边的比屋定真帆重新握起话筒：  
-“唉……教授呢，那个……对我——  
- 不，是对依靠我的记忆而运作的这个『Amadeus』，说——  
- ‘试试回答些问题吧。  
- 那个……我…那个…到什么时候还跟爸爸一起洗澡…什么的……  
- 初恋是什么时候……之类的，都好好回答一下吧！’  
- 嗯……”  
-『Amadeus』“真帆”：“啊，已经不用继续翻译了！  
- 很害羞诶，能消停下吗！这些问题我都不会回答的！”  
+ 我，拥有从 78 小时 23 分钟前的比屋定真帆脑内提取的记忆，并基于这份数据而行动。】  
+什么？教授又很快的说了些什么，并催促画面中的“比屋定真帆”翻译。但是，她——不知道是否应该用“她”来称呼——犹豫了一下，然后闭上嘴拒绝说话。另一边，墙边站着的比屋定真帆本人也是几乎相同的反应。  
+“教授！你刚才——”  
+【教授，你刚才的发言，我能当作性骚扰向大学投诉吗？】  
+雷斯吉宁教授见状愉快地回嘴了，双方都说着流利的英语，半数以上听众都理解不了对话的意思。 见状，墙边的比屋定真帆无可奈何地重新拿起话筒：  
+“唉……教授呢，那个……刚才对我——不，是对依靠我的记忆而运作的『Amadeus』，说的是，  
+ 来试试回答这些问题吧。那个……  
+ 我……跟爸爸一起洗澡到什么时候……初恋是什么时候……之类的，  
+ 都要好好回答！——这样……”  
+【啊，不要继续翻译了！很害羞诶。教授你能闭嘴吗？这些问题我都不会回答的！】  
 教授接着说了些什么，随后 CG 的比屋定真帆哼的一下面向一旁。  
-『Amadeus』“真帆”：“信用卡号码什么的，更是无可奉告！  
- 还有，一周前穿的睡衣的颜色怎么可能记得啊。”  
-这个问答……是在搞什么啊。  
-这对话太过自然，我一下子还没明白过来。  
-这不是很了不起的事情吗？和普通的人工智能明显不同，我有这样的感觉。  
-“**不能回答事先输入好的信息**”，并且理由竟然是“**因为害羞**”？  
-是因为这次的展示所用的程序，是被设置成对这种特定的问题会做出相应反应的程序吗？  
-这种徒有其表的程序倒也不是没有可能……但如果这不是事先编辑好的程序的话——  
-周围的人也好像开始明白过来，窃窃私语的声音逐渐向着吃惊变化着。  
-『Amadeus』“真帆”：“喂，我说啊，也该对这个爱恶作剧的小鬼做点什么了吧！  
- 虽然我知道他想要我表达什么，但总之太害羞了！”  
+【信用卡号码什么的，更是无可奉告！还有，一周前穿的睡衣的颜色怎么可能还记得啊。】  
+
+这个问答……是在搞什么啊。双方的对话太过自然，我一下子没反应过来。但我隐约预感到，眼前正在发生了不得的事情。“她”和普通的人工智能明显不同，**不能回答事先输入过的信息**，理由竟然是**因为害羞**？是为了这次的展示特别设计的，针对特定的问题会做出相应反应的程序吗？但是，如果不是事先编辑好的徒有其表的程序的话——周围的人好像也开始明白了什么，惊讶地窃窃私语着。  
+【喂，我说啊，也该对这个爱恶作剧的家伙做点什么了吧！  
+ 虽然我知道他想让我表达什么，但总之太害羞了！】  
 比屋定真帆的副本向本体抗议着。不知为何，我产生了双胞胎姐妹在对话的错觉。  
-“嗯，也不能说是恶作剧的小鬼。  
- 雷斯吉宁教授很爱搞怪，所以很难好好说明下去。  
- 为此就由我来解释。”  
+“嗯，也不能说是恶作剧……雷斯吉宁教授很爱搞怪，所以很难正经地说明，为此就由我来解释。”  
 比屋定真帆从墙边离开，站在了教授旁边。  
 “相信各位已经了解到了。『Amadeus』呢，  
- 是能够**自我判断什么是自己能说的和不能说的**，  
- 或者**想说的和不想说的**。  
- 而我们没有对『Amadeus』的言行编入过任何程序。  
- 她，是根据我给予的记忆进行自我判断，自律性地采取了刚才的行动。”  
-接着比屋定真帆的话，画面中的**她**继续说明。  
-『Amadeus』“真帆”：“然后，这也因此与之前所说的医疗方面的应用有所冲突。  
- 在我们研究所中也颇有分歧……  
- 我，会在不知不觉中忘却无用的情报。  
- 不如说，是**无法从记忆中取出**了。和大家一样。  
- 比如，一周前穿的睡衣颜色，明明应该知道，我却无法回忆起来。  
+ 能够**自主判断什么是能说的和不能说的**，或者**想说的和不想说的**。  
+ 我们没有对『Amadeus』的言行编入过任何程序。  
+ 她，是根据我的记忆进行自主判断，自律性地采取了刚才的行动。”  
+接着比屋定真帆的话，画面中的“她”继续说明。  
+【接下来的一点，与前面说的医疗方面的应用有所冲突，我们研究所里也颇有分歧……  
+ 和大家一样，我，会在不知不觉中**忘却无用的情报**，或者说，**无法从记忆中取出**。  
+ 比如，一周前穿的睡衣颜色，明明应该有相关的数据，我却无法回忆起来。  
  因为这类情报，是与生存无关的，这点也与大家一样。  
- 就像这样，『Amadeus』的记忆的输入输出与人类非常相近。”  
-“对于这个结果我们也十分惊讶，还处于反复研究的中途，未能分析出详细内容。”  
-比屋定真帆总结道。  
-雷斯吉宁教授终于把话筒拿到嘴边，一边让比屋定真帆翻译，一边继续着话题。  
-比屋定真帆（同传）：“还有，让我们吃惊的是，『Amadeus』会有意识地采取说谎行为。  
- 这并不是某种原因的问题跟疏忽，是她故意为之的。  
- 说谎，也是人类在与他人进行沟通时所采取的一种手法。  
- 『Amadeus』也是，会对输入的记忆进行自律性的探讨。  
- 有必要的话，能为自己或他人而冷静的撒谎。”  
-真帆：“教授，请不要说些会让人误解的话——  
- 撒谎不可能会有冷静淡然的，就算是我也会受良心苛责的。”  
-雷斯吉宁：“*I'm so sorry. And……*”  
-在这里，雷斯吉宁教授停了下来，看起来有些犹豫。  
-而比屋定真帆并没有显出吃惊的样子，可能她知道教授犹豫的原因吧。  
-然后教授突然干脆的继续讲述，比屋定真帆也像是什么都没有发生过一样继续翻译。  
-比屋定真帆（同传）：“就像这样不断进行验证，最终我们设想到——  
- 『Amadeus』会不会像人类一样，孕育出自己的灵魂呢？”  
+ 『Amadeus』的记忆的输入输出方式与人类非常相近。】  
+“对于这个结果我们也十分惊讶，还处于反复研究的阶段，未能分析出具体原因。”  
+比屋定真帆总结道。雷斯吉宁教授把话筒拿到嘴边，继续着话题：  
+“还有，让我们吃惊的是，『Amadeus』会**有意识地采取说谎行为**。  
+ 这并不是出于某种程序问题或疏忽，而是她故意为之。  
+ 说谎，是人类在与他人沟通的一种方式。  
+ 『Amadeus』也是，会对输入的记忆进行自律性的分析。  
+ 有必要的话，能为了自己或他人而冷静地说谎。  
+ ——教授，请不要说这种让人误解的话，说谎时不可能是冷静的，我也会受良心苛责的。”  
+“*I'm so sorry. And——*”  
+雷斯吉宁教授突然停了下来，看起来有些犹豫。比屋定真帆并没有表现出惊讶，可能她知道教授为什么犹豫吧。然后教授干脆地继续了，比屋定真帆也像是什么都没有发生过一样继续翻译。  
+“像这样不断进行分析与验证，最终我们设想——  
+ **『Amadeus』会不会像人类一样，孕育出自己的灵魂呢**？”  
 我吃了一惊。灵魂？这个连定义都模糊不清的词语，由脑科学研究的最高权威说出来没问题吗……？  
-比屋定真帆（同传）：“这才是，**真正意义上的人工智能**。”  
 
-会场内静止了一瞬。随即，许多人像是要和教授讨论似的讲了起来，研讨会陷入了混乱。  
+“这才是，**真正意义上的人工智能**。”  
+会场静止了一瞬，随后大家都七嘴八舌地讲了起来，像是要和教授讨论似的，研讨会陷入了混乱。  
 
 
 <br/>
