--- a/article/sg0/doc/0130.md
+++ b/article/sg0/doc/0130.md
@@ -1,98 +1,118 @@
 # 盟誓的文艺复兴 - 08
 > 1.055821  
-> [ 2036/03/07 ] 冈伦收到了 2025 年的自己的口信，要将“红莉栖”从『Amadeus』的诅咒中解放出来。他终于下定决心，通过桶子和真帆一直精心维持的时间跳跃环境，进行近 3000 次的时间跳跃回到过去。这部分，游戏的处理是直接一个转场带过，不如动画处理得燃。  
+> [ 2011/02/01 ] 凶真定下了作战计划，为了不发生第三次世界大战的未来，要破坏红莉栖的笔记本电脑和硬盘，以及删除红莉栖的记忆数据。  
 
 | [←prev](./0129) | [menu](../) | [next→](./0131) |
 
 ---
 
-“把‘红莉栖’从『Amadeus』的诅咒中解放出来吧。”  
-“诶？”  
-“是 2025 年的冈伦，留下的口信……”  
-“我的……口信……”  
-“寻找命运石之门这条世界线的道路是凶险的。只是重复上一次两次，是不可能找到方法的吧。”  
-“但是，从那开始发生的事情，不是会成为通往命运石之门的道路吗——”  
-“许多个未来的前方，不是会和过去连接在一起吗——”  
-“11 年前，冈伦你是这样说的。”  
-“把“红莉栖”解放出来……”  
-“所以说，我们所在的世界并不是无用的。一定是必要的世界。至少现在我是这么认为的。”  
-“当然，也肯定不能说这样就好。”  
-“桶子……”  
-“所以说，冈伦。再回去重新考虑一下不好吗？回到冈伦记忆中断的那段时间里，呐……”  
-“回到 2011 年…么？但是，那种事……”  
-“镜子里，映照着多了几分沧桑的我。”  
-“第一，以这样的姿态回去，我能做到什么…？”  
-“做得到哦。”  
-“发现无线电那边有声音传了出来。”  
-“好久不见呐，冈部先生。有 11 年了吧。”  
-“比屋定小姐么…..？”  
-“往房间里面看。”  
-“像是在回答这句话一样，桶子不知何时站到了房间深处的，一个光线昏暗的角落。”  
-“突然的亮光照明了镇座在那一角的东西——”  
+“是我……  
+ 现在开始，我们将着手实行新的作战。  
+ 未来的我说了，在无数的未来的前方，*Steins;Gate* 在等着我们。  
+ 今后通往的未来，即使是荆棘之路，也肯定不是无用的。  
+ ……我明白。我们目标的那扇门——为了到达那里，会花上难以估量的时间吧。  
+ 各方面的机关很可能会来阻止我们，妨碍我们。  
+ 即使如此，无论多少次，我都会重新来过的。  
+ 祝我好运吧……  
+ *El·Psy·Congroo!* ”  
+“……”（x3）
+第二天，我又在 LAB 召集了众人。完成了久违的自我电话之后，我感受到了三道一言难尽的视线，来自真帆、铃羽和篝。也是啊，她们从来都没有见过凤凰院凶真，也不可能理解这样的中二病行径。可是，别用那样的眼神看着我啊……我也觉得很羞耻的好不好……  
+“那是……什么……”  
+“这是……可以说是……对了，是仪式一类的东西！”  
+“仪式……啊……”  
+没错，就是仪式。每次感到害怕时让自己振作起来的仪式。  
+“莫非，冈伦先生，你在面对红莉栖的时候，不会也是这个态度吧？”  
+“唔……不、不是冈部，是凶真！”  
+“你在开玩笑吗？”  
+“真帆碳，不要吐槽过头了，毕竟冈伦也还在摸索中呀。”  
+“哈……”  
+“这样啊，这位就是凤凰院凶真先生啊。”  
+“是的哟\~！是狂喜的风框咳血家的说！”  
+“也是古代的炼金术师的转世喵！”  
+“还是清心斩魔流的师傅哦！”  
+“诶～好厉害！”  
+“不行了，爸爸，我跟不上了。”  
+虽然真由理、菲莉丝和琉华子都表现得很兴奋也很捧场，不过果然对于出自接触凤凰院凶真的三人来说果然还是理解不能。拜托了，不要用这种古怪的眼神看着我……我的心好累……  
 
-![](../static/image/0130-1.png)
+“那么，你具体想怎么做呢？”  
+好在真帆貌似暂时不再纠结于之前的闹剧，开口将话题拉回正轨。  
+“咳咳——首先要声明的是，**我们**的最终目标是**不发生第三次世界大战的未来**。”  
+刚才也对自己说了，我不认为我们能很快就到达我们想要的世界线——*Steins;Gate*。就像那个夏天，一步一步积累下来才最终抵达了 β 世界线一样，为了要抵达命运石之门，一定要**先达成众多的过去和未来**才行。为了那个目标，现在必须要做的事情，就是**修正这条世界线的未来**。失去了红莉栖这般重要存在换来的这个世界，其前方等待着的未来，不能容许有那样巨大的悲伤和痛苦存在，我不会认同。所有的事情必须从这里开始。即使之后，现在将要通往的那个未来将不复存在，这也是选择了这个世界的我的责任。  
+“我跟你们说过吧，在来到这条 β 世界线以后，经历过几次世界线变动。  
+ 首先必须要消除那些原因。”  
+“原因，是什么喵？”  
+“牧濑红莉栖的笔记本电脑和硬盘，还有『Amadeus』里保存的‘红莉栖的记忆’。”  
+**保存着和时间机器有关的论文的硬盘**和**与之相关的记忆**——以 STRATFO 为代表，恐怕有多个组织和机关在互相争夺这些东西，所以才引发了那些世界线变动。  
+“因此，破坏红莉栖的笔记本电脑和硬盘，以及删除红莉栖的记忆数据，这就是这次作战的最终目标。”  
+“把红莉栖的记忆数据删除……！？这种事……！你是认真的吗？”  
+“嗯。”  
+“可是……那份记忆是，红莉栖活过的证明啊？  
+ 是她在这个世界，和我们共同度过了一段时间的证据哦？  
+ 我……不想把它们删除掉……”  
+我能理解真帆的心情。我也一样，如果是几天前的我应该也会这么想吧。  
+“那么，即使红莉栖的记忆被用于邪恶目的，也无所谓吗？”  
+“这个……”  
+“我曾经经历过的几条世界线种，那家伙的记忆都成为了争端的导火索。  
+ 而且有很多人都被卷了进来，现在站在这里的篝也是这样。”  
+ 在失去记忆的这几年间，发生在篝身上的事，恐怕和之前的世界线相比没什么变化吧。如果是这样的话，这也全是由于红莉栖的记忆这个潘多拉的盒子而引发的悲剧。  
+“而且我也曾经在那个数据的世界中待过，所以能体会到，那个世界的冰冷——”  
+是的，我已经体会过了。又暗又冷，那个暗无天日的世界。过去、现在和未来都不存在，只是被严实地关在里面的，盒子中的世界。  
+“就算红莉栖一直被囚禁在那种黑暗冰冷的世界里，你也能够接受吗？”  
+“……”  
+“而且，那家伙活过的证据，就存在于我们的这里。”  
+我指了指自己的脑袋。  
+“她就存在于我们的记忆中。  
+ 带着这份记忆，引导世界走向不会发生第三次世界大战的和平未来，  
+ 这才是，那家伙活过的证据。”  
+所有人的视线都集中在沉默的真帆身上。  
+“……真是老套的台词啊。如果红莉栖听到了这些话，肯定会嘲笑你吧。”  
+“说的也是啊。”  
+“不过，可能越老套，就越蕴含着真实吧。”  
+真帆严厉的表情忽然一变，变成了微笑。  
+“我会按你说的做的。”  
+“……谢谢。”  
 
-“电话微波炉（暂定）……”  
-“在听你和桥田先生描述过后制作出来的哟。看，不是也准备了 VR 耳机么？”  
-“因为想着会有这种事，飘升机也准备好了。”  
-“…………”  
-“桶子进一步和我说明了，在我没有意识的这 11 年里，他一直在维持可以“接收”时间跳跃的环境。”  
-“原来如此啊……”  
-“就算我没有意识，只要预先在我太阳穴附近设置好自动受信装置，这样就足够了。”  
-“在 2025 年我倒下后，这幅身体，一直都是由真由理他们照顾的。”  
-“桶子和真帆，在 11 年前就预期了这件事。”  
-“也许，这也可能是 2025 年我的指点吧。”  
-“不断改良后的结果，可能的跳跃时间延长至 336 个小时。”  
-“336 个小时……两周么。”  
-“可是，这是途中才改的。改良这台机器是 10 年以前，所以在那之前仍然只能跳跃 48 小时。”  
-“也就是说，想要回到 2011 年 1 月末的话，单纯计算一下——怎么说也要近 3000 次的时间跳跃……”  
-“这将会是前所未有的艰辛的旅程。就算这样你还要去的话……”  
-“…………”  
-“将近 3000 次的时间跳跃——究竟现在的我能够做到吗？”  
-“累了的话，在途中休息一下就好。”  
-“桶子……”  
-“没问题的。不管到了什么时间，我们都一定会在的。”  
-“比屋定……”  
-“我呐……感到后悔……  
-因为『Amadeus』，那孩子死后还被这么多怀有邪念的人所利用……  
- 几年……几十年……  
- 所以我也拜托你……把那孩子……‘红莉栖’从丑恶的欲望漩涡中解放出来……  
- 救救红莉栖……能做到这件事的，冈部先生……只有你了……”  
-“…………”  
-“我并不知道现在的我能不能做到。”  
-“而且也并不能保证，接下来的道路一定会通往命运石之门。”  
-“尽管这样——”  
-“再一次，考虑，么——”  
-“我能做到什么。”  
-“我应该做什么。”  
-“二位，拜托了……”  
-“okey dokey！”  
-“一听到回答，桶子就开始快速地着手准备了。”  
-“冈部先生。”  
-“……？”  
-“如果可以的话，下次遇到红莉栖的时候和她说，“未来的我，可是做出了可以跳跃的时间是你的 7 倍的机器哟”。”  
-“……我知道了。”  
-“见到了红莉栖的话——”  
-“冈伦。这边的准备已经 OK 了！”  
-“真是快呐。”  
-“毕竟一直都在维护呐。”  
-“真不愧是你啊。”  
-“还好啦。”  
-“电话微波炉（暂定）的 VR 耳机。”  
-“这个和我在 LAB 里见到的，多少有点不同，但那是我们的未来道具这点是毫无疑问的……”  
-“啊，但是不和真由理姐她们说的话没问题么？”  
-“……现在不进行跳跃的话，决心就要被钝化了。”  
-“而且，就算现在不见，总是会见的。在过去的世界里……”  
-“说的也是。”  
-“从扬着嘴角微笑的桶子那里接过 VR 耳机，装在了头上。”  
-“那么，就这样。两周前，再见吧。”  
-“啊啊，两周前再见。”  
-“保重啊。”  
+“桶子，红莉栖的笔记本电脑和硬盘都在你那里对吧？”  
+“嗯，真帆碳交给我保管，我把它们藏到无法轻易被找到的地方去了。”  
+“那些东西在『Amadeus』的事情结束以后立刻破坏掉。”  
+“……真的可以吗？”  
+桶子看向了真帆，这次她果断地点头了。  
+“可以。不过，这件事让我来做。”  
+“OK。”  
+现在的问题是『Amadeus』那边。  
+“真帆，你能登录『Amadeus』所在的服务器吗？”  
+“嗯，应该是可以的。桥田先生，能借我用一下电脑吗？”  
+“诶？啊，稍等。”  
+桶子用单手拦了下真帆，然后开始在键盘上敲击着。  
+“桶子喵，你在做什么喵？”  
+“为了不让 IP 暴露，姑且做一些严密的保护……OK，请吧。”  
+桶子让出位置。真帆坐在电脑前，认真地在输入了一些文字，然后点击鼠标。  
+“……诶？奇怪……无法登录……”  
+“怎么回事？”  
+“是密码输错了吗？”  
+“不可能犯这种低级错误的，至今为止输入过无数次了。”  
+真帆试着重新输入了好几次密码，结果都是无法登录服务器。  
+“唔——看起来好像是我的登录权限本身被停止了。  
+ 到底是怎么回事啊……我去给教授打个电话问问。”  
+真帆拿出手机，打给雷斯吉宁教授。然而过了一会儿，真帆困惑地把耳边的手机放了下来。  
+“不行，打不通。”  
+她还尝试着打给莱耶丝教授，可是果然也没有接通。  
+“真是的！到底发生什么事了啊！”  
+“果然，不会这么简单吗……”  
+真帆失去了登录权限，应该是由于某些人已经采取了某些行动。  
+“找找别的接入方法吧。桶子，能入侵维克多·孔多利亚大学的服务器吗？”  
+“OK，我试试看。”  
+“虽然你说得这么轻松，我们研究所服务器的防御措施可是很厉害的哦。”  
+“不要紧的，毕竟桶子是超级嗨客嘛。”  
+“要说的话应该是超级黑客啊。”  
+桶子可是仅仅用了 20 个小时就成功骇入了那个 SERN 的男人，我对他有着绝对的信任。桶子和真帆认真地盯着显示屏，并讨论着什么。应该是为了更方便入侵，在了解详细的信息吧。  
 
-然后——  
-我再一次地跳跃到过去——  
-那是，非常非常漫长的——  
-漫长到难以想象的旅途。  
+在此期间我也要做些力所能及的事。我走向了开发室里面，打开了今天早上刚买来的箱子。真由理在我身后探头看着。  
+“哇，是微波炉酱\~”  
+“不是用来解冻炸鸡的哦。”  
+“好可惜……大家肚子饿了的话，我还想用多汁炸鸡 NO.1 来款待大家的……”  
+首先要重现电话微波炉（暂定），之后再请真帆协助制造时间跳跃装置。从未来回来之前，我已经牢牢记住了它的结构和机理，应该不会花太多时间。  
+LAB 终于重现了一派忙碌的景象。  
 
 
 <br/>
