--- a/article/sg0/doc/0005.md
+++ b/article/sg0/doc/0005.md
@@ -70,7 +70,7 @@ ATF 的派对结束以后，已经过了几天。
 ![](../static/image/0005-2.png)
 
 “别偷看密码哟。”  
-比屋定真帆用自己的身体挡住了手。我则把视线错开。登陆系统的过程完成以后，显示器上出现了只有命令行的一点装饰都没有的漆黑画面。  
+比屋定真帆用自己的身体挡住了手。我则把视线错开。登录系统的过程完成以后，显示器上出现了只有命令行的一点装饰都没有的漆黑画面。  
 “准备好了吗？”  
 “啊啊，拜托了。”  
 比屋定真帆在命令行里输入了几个命令。  
@@ -104,15 +104,14 @@ ATF 的派对结束以后，已经过了几天。
 突然，从喇叭里想起了女性的声音。  
 “啊……！”  
 我不禁坐直了身体。我很清楚……这个声音，不可能会忘记，不可能会忘——！  
-比屋定真帆打开了显示器。画面里，我一辈子也不可能忘记的她的身影，慢慢地显现出来。是模拟了她在脑科学研究所活动时的样子吗？“她”的身上，穿着白大褂。  
-电脑的摄像头自动往我这边看了过来。  
+比屋定真帆打开了显示器。画面里，我一辈子也不可能忘记的她的身影，慢慢显现出来。是模拟了她在脑科学研究所活动时的样子吗？“她”的身上，穿着白大褂。  
 “那个，学姐，这位是？”  
-比屋定真帆把我介绍给她。我的耳朵已经无法接收声音，只是眼睛看得出神。就算是现在，也好想把手伸过去，想要去触摸她。  
-在那里——她，就在那里。  
+说话的同时，电脑的摄像头也自动往我这边看了过来。比屋定真帆把我介绍给她。我的耳朵已经无法接收声音，只是眼睛看得出神。就算是现在，也好想把手伸过去，想要去触摸她。在那里——她，就在那里。  
 
 ![](../static/image/0005-3.png)
 
-“请多关照！”  
+“冈部伦太郎先生，初次见面，  
+ 我是牧濑红莉栖，请多关照！”  
 
 
 <br/>
