--- a/article/sg0/doc/0008.md
+++ b/article/sg0/doc/0008.md
@@ -6,9 +6,10 @@
 
 ---
 
-『Amadeus』“红莉栖”：“冈部伦太郎先生。初次见面，我是牧濑红莉栖。请多关照。”  
+“冈部伦太郎先生，初次见面，  
+ 我是牧濑红莉栖，请多关照。”  
 “…………”  
-我做不到任何的反应。显示器内“红莉栖”的动作，的确有少许的违和感，但是只有少许，稍微看一会儿的话就会习惯了。比起那个，这个声音和说话方式简直和本人一模一样。眼泪都快掉下来了，我拼命的忍住。  
+我做不出任何反应。显示器内“红莉栖”的动作，的确有少许的违和感，但只有少许，稍微看一会儿的话就会习惯了。比起那个，这个声音和说话方式简直和本人一模一样。眼泪都快掉下来了，我拼命的忍住。  
 “那个，学姐，你那边应该不是深夜吧？”  
 “为什么这么问？”  
 “我在想，你们两位，会不会是很困呢？”  
@@ -76,7 +77,7 @@
 啊，啊啊——原来如此……  
 比屋定真帆的这个态度，和我了解的红莉栖可能会说的话考虑了一下，答案只有一个。  
 “这个 sweets（笑）……”  
-喃喃自语的说着曾经经常对红莉栖所使用的网络用语，心情一下变得轻松了起来。大概，是对比屋定真帆说了“不是挺相配的吗？”或者“学姐的春天也终于来到了呢\~”，这样无聊的话，一定没错。要是有男女彼此间进行着哪怕是一点亲密的谈话，不管怎么样都会当作是在交往。这就是勇往直前贯彻 sweets（笑）之道的红莉栖。这系统是有多不得了啊，连这种地方都和本人一模一样真的合适吗？我不由得苦笑。莫非这家伙背着比屋定真帆和雷斯吉宁教授，偶尔偷偷地登陆着 @ch 呢？不，这家伙的话可能连发帖都有在干吧！就像曾经的红莉栖，用未来机械研究所的公用电脑，估算着没有人的时候悄悄的浏览 @ch 那样。  
+喃喃自语的说着曾经经常对红莉栖所使用的网络用语，心情一下变得轻松了起来。大概，是对比屋定真帆说了“不是挺相配的吗？”或者“学姐的春天也终于来到了呢\~”，这样无聊的话，一定没错。要是有男女彼此间进行着哪怕是一点亲密的谈话，不管怎么样都会当作是在交往。这就是勇往直前贯彻 sweets（笑）之道的红莉栖。这系统是有多不得了啊，连这种地方都和本人一模一样真的合适吗？我不由得苦笑。莫非这家伙背着比屋定真帆和雷斯吉宁教授，偶尔偷偷地登录着 @ch 呢？不，这家伙的话可能连发帖都有在干吧！就像曾经的红莉栖，用未来机械研究所的公用电脑，估算着没有人的时候悄悄的浏览 @ch 那样。  
 
 “喂，喂！进来的时候好歹敲个门啊！”  
 “克里斯蒂娜！你放着该干的事情不做到底在看什么啊？”  
@@ -98,17 +99,17 @@
 “我错了，我不会再说了。”  
 “红莉栖”慌张地认输了。大概，生前的红莉栖和比屋定真帆也是每天上演这样的对话吧……雷斯吉宁教授是否会感到厌烦呢？  
 “这么吵闹真是不好意思，冈部先生。要和“她”说点什么吗？”  
-“啊，啊……”  
+“啊、啊……”  
 被比屋定真帆催促着坐到电脑前的椅子上。正面显示器显示着“红莉栖”的脸，视线相交，她微微笑了起来。明明是初次见面，她是会用这么柔和表情的家伙吗？我表示疑问。但是，一开始我和红莉栖相遇的方式太糟糕了，不如说，她对我的那种带刺的态度才是异常的。  
 “什么问题都可以问，我会在可能的范围内回答你的。”  
-“好。啊……”  
+“好，嗯……”  
 ……糟糕，和红莉栖一起的记忆漫无边际的溢了出来。  
 到底要说什么好，已经混乱了。因此，不知不觉嘴里吐出的话语是：  
 “时间机器……能制造出来吗？”  
 这是曾经，在别的世界线我在红莉栖的讲座上和她初次辩论的话题。那个时候，我被单方面驳倒，被辩得体无完肤。  
-“诶？时间机器，吗？”  
+“诶？时间机器吗？”  
 “还在想你会从什么话题开始，这是忽然干什么？”  
-“只，只是测试啊，关于能不能做到思考实验这点。”  
+“只、只是测试啊，关于能不能做到思考实验这点。”  
 不单是“红莉栖”楞了一下，比屋定真帆也很惊讶于我提出的问题，我慌忙的编了个借口。  
 “嗯。怎样？“红莉栖”？”  
 “是呢。从结论来说，时间机器是不可能的——  
