--- a/article/sg0/doc/0015.md
+++ b/article/sg0/doc/0015.md
@@ -171,7 +171,7 @@
 “不会那么做的。”
 貌似是铃羽最近养成的习惯吧，她又望着天花板叹了口气。  
 
-“下一条新闻。厚生劳动省发表报告，关于正在美国猛烈发作的新型脑炎病毒，至今为止尚未在日本国内发现病例。只是，这种新型脑炎因为潜伏期很长，无法否定已经在国内登陆的可能性。依据传染病法，指示全国的医疗机关迅速调查对新型脑炎的对应及传染病发生动向。接下来，有请御茶水医科大学的春山壮子教授接受问答——青山女士，这种新型的脑炎，具体会产生怎样的症状呢？”  
+“下一条新闻。厚生劳动省发表报告，关于正在美国猛烈发作的新型脑炎病毒，至今为止尚未在日本国内发现病例。只是，这种新型脑炎因为潜伏期很长，无法否定已经在国内登录的可能性。依据传染病法，指示全国的医疗机关迅速调查对新型脑炎的对应及传染病发生动向。接下来，有请御茶水医科大学的春山壮子教授接受问答——青山女士，这种新型的脑炎，具体会产生怎样的症状呢？”  
 “新型脑炎虽然传染力弱，但是潜伏期很长，会突然发作。症状的话，以幻觉和记忆障碍为主。比如说，在病例报告中，患者本应在公司工作的，回过神来已经在家里了；以及脑海中出现与没有见过的人会面的记忆之类的；还有就是，患者觉得事情发生了但实际上没有发生的记忆混乱也有出现。无法区别梦境与现实，时间感的丧失，与周围的人记忆不一致而陷入错乱状态一类的。换言之，像是没睡醒的状态，也可以说是症状更加明显的既视感。”  
 “关于治疗的方法有什么办法吗？”  
 “与其他的脑炎不同，只要接受适当的治疗的话能够相对快速地完全康复。所以，我想即便国内出现感染者的话，也不是那么令人恐惧的事情。”  
