--- a/article/sg0/doc/0030.md
+++ b/article/sg0/doc/0030.md
@@ -52,7 +52,7 @@
 “应该跟这个脱不开干系吧。”  
 铃羽说着，举起了正在读的杂志页面。  
 “新型脑炎……”  
-我读了读文章。好像是从 11 月开始成为话题的，也曾经瞥见过关于它的新闻报道，说是海外已经发现近百名发病者，在日本也有约 10 人正在住院接受检查。不知何时已经登陆日本了吗……就是说吹雪也是住院接受检查的病人之一……是这样吗？会空气感染之类的吗？在圣诞派对上一起的我们也会被传染吗？……尽管知道就算不安也没有办法，但还是不由自主地往这方面想。  
+我读了读文章。好像是从 11 月开始成为话题的，也曾经瞥见过关于它的新闻报道，说是海外已经发现近百名发病者，在日本也有约 10 人正在住院接受检查。不知何时已经登录日本了吗……就是说吹雪也是住院接受检查的病人之一……是这样吗？会空气感染之类的吗？在圣诞派对上一起的我们也会被传染吗？……尽管知道就算不安也没有办法，但还是不由自主地往这方面想。  
 “呐，冈伦……也去医院检查一下比较好吧？当时冈伦的脸色比吹雪酱更差哦……？”
 “……啊，我会考虑的。”  
 敷衍地回答了真由理，目光又回到杂志上。
