--- a/article/sg0/doc/0031.md
+++ b/article/sg0/doc/0031.md
@@ -113,11 +113,11 @@
 桶子从口袋里拿出了什么，代替了枪放在铃羽的双手中。那是手工编织的手套。圣诞派对那天，从由季那里收到的礼物。我对此记忆犹新。  
 “我……我……”  
 接过手套的那一刻，铃羽的眼泪一滴滴地落下。  
+“我……我不知道该怎么办……该怎么办才好……  
+ 帮帮我，爸爸……帮帮我……拜托了……”  
+铃羽的肩膀颤抖着，眼泪扑哧扑哧地掉落。
 
 ![](../static/image/0031-2.png)
-
-“帮帮我，爸爸……帮帮我……拜托了……”  
-铃羽的肩膀颤抖着，眼泪扑哧扑哧地掉落。
 
 我下意识地，凝视着伫立在黑暗中的时间机器的方向。  
 “我……不会再乘坐了。已经决定了……”  
