--- a/article/sg0/doc/0039.md
+++ b/article/sg0/doc/0039.md
@@ -43,7 +43,7 @@
 “对的，是这么说的。所以完全不用担心。”  
 “什，什么呀。哈啊……太好了……”  
 保持被由季抱着的样子，真由理终于放松下来。  
-好像吹雪以前检查的时候，“虽然还有疑问，但是在病情不恶化的情况下对日常生活没有影响”，根据定期去医院进行观察的结果应该是这样。这个新型脑炎自从登陆日本国内以后，至今患者数量仍在持续增加。不过不幸中的万幸是，这其中没有出现任何一名死者。  
+好像吹雪以前检查的时候，“虽然还有疑问，但是在病情不恶化的情况下对日常生活没有影响”，根据定期去医院进行观察的结果应该是这样。这个新型脑炎自从登录日本国内以后，至今患者数量仍在持续增加。不过不幸中的万幸是，这其中没有出现任何一名死者。  
 （我倒不觉得那是什么病啊……）  
 在我的想法里，这种被叫做新型脑炎的症状，实际上应该是一种跟 *Reading·Steiner* 很接近的能力。之前探望吹雪的时候，我顺便悄悄地对她以外的患者进行了一些调查。虽然不能得到准确的结论，不过至少能确定当时和吹雪在同栋楼住院的患者，基本都有着程度不同的对于“同一世界线”的记忆——也就是有着，处于战争状态的日本的相关记忆，不止一人是这样。  
 “可以和吹雪酱见个面吗？”  
