--- a/article/sg0/doc/0049.md
+++ b/article/sg0/doc/0049.md
@@ -36,13 +36,13 @@
 - 朱蒂·莱耶丝 *Judy·Reyes*
   - 疑似为『教授』的同盟
 - 未知武装势力
-  - 想要抢夺红莉栖的笔记本电脑和移动硬盘
+  - 想要抢夺红莉栖的笔记本电脑和硬盘
 
 ## 情报整理 | 重要物品
 - 《中钵论文》
   - 大战导火索，但本身质量很差
   - 怀疑实际存在红莉栖所著原本
-- 红莉栖笔记本电脑和移动硬盘
+- 红莉栖笔记本电脑和硬盘
   - 密码未解锁
   - 已被冈伦破坏
 - 『Amadeus』
@@ -65,7 +65,7 @@
 ## Steins;Gate 达成条件
 - ■■■■■■■■■■■■■
   - ■■■■■■■■■■
-  - 破坏红莉栖的笔记本电脑和移动硬盘
+  - 破坏红莉栖的笔记本电脑和硬盘
 - ■■■■■■■■■■■■■
   - 删除『Amadeus』■■■■■
   - ■■■■■■■■■■
