--- a/article/sg0/doc/0051.md
+++ b/article/sg0/doc/0051.md
@@ -98,7 +98,7 @@
 语毕，我挂断了电话。  
 真由理平安无事。也就是说，刚刚的世界线变动与真由理无关吗？虽说不能疏忽大意……或者刚刚的只是单纯的眼花啊白日梦之类的，根本就不是什么世界线变动？如果真是这样，我反倒觉得现实过头了。  
 
-![](../static/image/0051-4.png)
+![](../static/image/emoji/app-amadeus.png)
 
 以防万一，我又拿起了手机。最近几天经常点的位置，果然那个图标还静静地待在那里。  
 “……”  
