--- a/article/sg0/doc/0078.md
+++ b/article/sg0/doc/0078.md
@@ -77,7 +77,7 @@
 “我应该问些什么？先说好，我在人工智能方面拥有的知识，只有日本人平均的水平。”  
 “也是呢，虽然我也可以随心所欲地说……  
  既然机会难得，我们以讨论的形式进行吧。这样聊起来也比较起劲。”  
-她刚这么一说，我的脑中瞬间浮现出清晰的影像。  
+这句话在我脑中瞬间勾出了一个清晰的影像。在另一条世界线上，红莉栖在演讲开头说过同样的话。  
 
 ![](../static/image/0078-2.png)  
 
