--- a/article/sg0/doc/0084.md
+++ b/article/sg0/doc/0084.md
@@ -84,7 +84,7 @@
 “当时，要全部研究所成员换新的用户名。  
  我呢，并没有想太多，就取了‘Salieri’这个名字。  
  正好和人工智能『Amadeus』对应。”  
-我知道这件事。以前，在和光市的办公室，看到过比屋定用这个用户名登陆系统。  
+我知道这件事。以前，在和光市的办公室，看到过比屋定用这个用户名登录系统。  
 “然而，也许，并不是这样。”  
 “不是……什么？”  
 “或许我啊，使用‘Salieri’这个名字想对比的，并不是『Amadeus』，而是红莉栖本人。  
