--- a/article/sg0/doc/0091.md
+++ b/article/sg0/doc/0091.md
@@ -36,7 +36,7 @@
 “谢谢……”  
 可能是终于放松了心情的缘故，真帆一下子失去了力气，无力地瘫坐在地上。  
 “我刚才看了一下日志。前辈，歌唱得很好呢，那首第 11 号钢琴奏鸣曲。  
- 有个秘密我只在这里告诉你：这个旋律，也是我个人电脑的登陆密码。”  
+ 有个秘密我只在这里告诉你：这个旋律，也是我个人电脑的登录密码。”  
 “是嘛……”  
 虽然想让她忘掉唱歌的事，不过顾虑之下还是没有说出口。毕竟别说是这段记忆了，“红莉栖”的存在本身都马上要消失了。  
 
