--- a/article/sg0/doc/0113.md
+++ b/article/sg0/doc/0113.md
@@ -18,7 +18,7 @@
 有谁在摇晃着我的身体。  
 “冈伦睡太久了啦\~篝小姐很快就要来了呢。”  
 ……篝？耳中一听到这个名字，迷糊的意识立刻就清醒了过来。我一下子坐起来，发现自己正在 LAB 的沙发上，窗外一片明亮。  
-“呼\~终于起床了呢\~嘟嘟噜\~冈伦\~”  
+“呼\~终于起床了呢\~嘟嘟噜\~♪冈伦\~”  
 “啊……嗯。”  
 真由理满意地点点头，从我身边走开。环顾房间，桌上摊开的教科书和笔记应该是真由理的，她在做作业吧。除了真由理，还有桶子正蜷曲着他巨大的身体，面朝电脑，显示器中尽是一些萌萌的女性角色，看来又在玩黄游。当下所见，LAB 里只有我和桶子、真由理三个人。看了一下手机的时间，快到 12 点了，也就是说，我睡了 10 个多小时。这算怎么回事，我居然还没确认世界线到底有没有变动就失去意识了。仔细聆听，窗外传来了一如平常的嘈杂声，完全没有半点 STRATFO 正在逼近的迹象，所以先松了一口气。  
 “冈伦，你刚才的样子好像做了噩梦一样，没事吧？”  
@@ -131,7 +131,7 @@
 *♪\~随着风眼睛眨呀眨\~♪*  
 *♪\~伸出手的话就能够抓到哟\~♪*  
 真由理又给我们认真唱了一遍。这时玄关方向，传来什么东西掉落的声音。不知什么时候起，篝站在玄关，带着惊讶的表情，嘴巴一张一合。她的包丢在脚下，好像是进入房间后就被震惊到丢下了包。不过，刚才有什么事情令她如此惊讶吗？  
-“啊，篝小姐，嘟嘟噜\~”  
+“啊，篝小姐，嘟嘟噜\~♪”  
 “那、那……！”  
 “那？”  
 “那首歌！我……有印象！”  
