--- a/article/sg0/doc/0121.md
+++ b/article/sg0/doc/0121.md
@@ -19,7 +19,7 @@
 打开通往屋外楼顶的门，夏天落日的余晖与温暖的风抚上脸庞。黄昏时分的天空，已经有些星星微微闪烁。真由理站在那里，站在楼顶上矗立的时间机器的旁边，一只手按住快被风吹走的帽子，另一只手伸向了天空。真由理张开的手掌，直直地伸向秋叶原那由蓝到红渐变的天空，好像要用手抓住，那颗早早开始闪烁的最亮的星星。真由理的视线，穿过手掌向着那颗星星延申，看向比星星更遥远的地方。这副景象，飘逸绮丽，如梦似幻，好像触之即碎。  
 “妈妈……”  
 篝忍不住叫出声来。感觉如果放着不管，真由理就要那样被星星带走了。  
-“啊、篝酱！嘟嘟噜\~”  
+“啊、篝酱！嘟嘟噜\~♪”  
 “妈妈……！”  
 篝紧绷的身体放松了下来——太好了，是平常的妈妈。没必要担心，妈妈不会抛下我不管，独自去某个地方。随着篝走近，真由理放下了伸向了天空的手。  
 “怎么了？为什么要把我叫到这里？”  
