--- a/article/sg0/doc/0122.md
+++ b/article/sg0/doc/0122.md
@@ -43,7 +43,7 @@
   - 派出武装势力想要夺回篝
 - 未知武装势力
   - 入侵了和光市办公室与真帆酒店
-  - 想要抢夺红莉栖的笔记本电脑和移动硬盘
+  - 想要抢夺红莉栖的笔记本电脑和硬盘
 
 ## 情报整理 | 重要物品
 - 『Amadeus』
@@ -54,7 +54,7 @@
 - 《中钵论文》
   - 大战导火索，但本身质量很差
   - 怀疑实际存在红莉栖所著原本
-- 红莉栖笔记本电脑和移动硬盘
+- 红莉栖笔记本电脑和硬盘
   - 密码未解锁，可由桶子破译
   - 由真帆保管
 
@@ -76,7 +76,7 @@
 ## Steins;Gate 达成条件
 - ■■ 红莉栖的时间机器相关论文
   - ■■《中钵论文》的红莉栖原本
-  - ■■ 红莉栖的笔记本电脑和移动硬盘
+  - ■■ 红莉栖的笔记本电脑和硬盘
 - ■■ 红莉栖的记忆备份
   - ■■■■■■■■■■
   - ■■ 篝脑海中的记忆备份
