--- a/article/sg0/doc/0123.md
+++ b/article/sg0/doc/0123.md
@@ -35,7 +35,7 @@
 
 ![](../static/image/0123-2.png)
 
-“冈伦，嘟嘟噜\~”  
+“冈伦，嘟嘟噜\~♪”  
 “我如此巨大的存在感，居然没注意到，你没事吧，冈伦？”  
 啊啊，这样啊。桶子跟真由理，也是一直都在那里的啊。不，不只是他俩。  
 画面由黑白逐渐恢复成彩色，并传来了熟悉的声音。  
