--- a/article/sg0/doc/0126.md
+++ b/article/sg0/doc/0126.md
@@ -13,7 +13,7 @@
 
 ![](../static/image/0126-1.png)
 
-“桶子叔叔，铃羽姐姐，嘟嘟噜\~”  
+“桶子叔叔，铃羽姐姐，嘟嘟噜\~♪”  
 “篝，我不是说过，除了有要紧事不要来这里吗？”  
 篝……这个孩子，是小时候的篝吗？  
 “对不起……但是妈妈她们都出门了，没有回来嘛。”  
