--- a/article/sg0/doc/0128.md
+++ b/article/sg0/doc/0128.md
@@ -23,7 +23,7 @@
 “之前？”  
 “就是那个，之前，不是取出你的记忆作为『Amadeus』的样本了吗？”  
 啊啊……是指这个啊，和桶子说的一样，在一月末。  
-“不，不是……只是有点……”  
+“不、不是……只是有点……”  
 “……？”  
 “篝……”  
 “嗯？怎么了，冈伦先生？”  
@@ -49,7 +49,7 @@
 “有一些东西落在这里了。”  
 “落了东西？”  
 “比起这个，你一个人在这里干什么呢？”  
-真帆甚至都没有要找落下的东西的意思，便径直向我走来，坐在了我的眼前。  
+真帆甚至都没有装作要找东西的意思，便径直向我走来，坐在了我的眼前。  
 “你刚才的表情一直糟糕呐，有什么在意的事情吗？”  
 难不成，她是因为担心我而特意回来的？  
 “虽然我可能代替不了红莉栖，但是如果你愿意的话，也可以和我谈一谈。”  
