--- a/article/sg0/doc/0129.md
+++ b/article/sg0/doc/0129.md
@@ -15,7 +15,7 @@
 “怎么了？”  
 “想问一件事，你是怎么看我的？”  
 “怎么……是指？”  
-“等等，冈伦……你不会！  
+“等等，冈伦……你该不会！  
  就、就算是冈伦，我也不会把铃羽交给你的哟！  
  作为父亲我无法认可！不行，绝对不行！”  
 我无视了完全误会了的桶子，望向铃羽。  
@@ -46,7 +46,7 @@
  真的是，火大到想要狠狠地揍你一顿！”  
 “……呵。”  
 在本人面前说到这种地步，也算是痛快了。  
-“铃、铃羽……不管怎么样也不用说到这个地步……”  
+“铃、铃羽……再怎么样也不至于说到这个地步……”  
 “是啊喵，冈伦他应该也是知道的喵。”  
 是啊，我是知道的。我必须要想办法做点什么，这种事我还是知道的。  
 “那么……就这么做吧。”  
@@ -54,7 +54,7 @@
 “你不是很想揍我吗？那就揍我一顿吧！”  
 “诶……可是……”  
 “不用顾虑。”  
-“铃……铃小姐，不要……冈伦他……”  
+“铃、铃小姐，不要……冈伦他……”  
 “没关系的，真由理。”  
 这是我给的交代，是对铃羽的，对未来的世界的，也是对我自己的。  
 “冈伦叔叔……”  
@@ -66,9 +66,9 @@
 “那……我就认真上了。”  
 “诶？啊、不、等等……稍微手下留情——”  
 “嘿！！！”  
-“咕啊——！！”  
+“咕啊——！！！”  
 我被她毫不留情抡起的拳头给打飞了。  
-“啊、对不起，稍微用力过度了……”  
+“啊，对不起，稍微用力过度了……”  
 “刚刚可是发出了不得了的声音哦？”  
 “没、没事吧，冈伦！？”  
 真由理她们慌张地过来探头看我的脸色。的确，非常痛，大脑可能受到了比 *Reading·Steiner* 或时间跳跃时更加严重的伤害。可是——  
@@ -92,7 +92,7 @@
 
 “没错！  
  **吾名为凤凰院凶真！！！！**  
- **LABMem No. 001，这个 LAB 的创立者——**  
+ **LABMem No.001，这个 LAB 的创立者——**  
  **渴望着混沌，欲图颠覆世界支配构造的 *Mad Scientist*——**  
  **凤凰院凶真！！！！**”  
 “琉华子！！”  
@@ -123,17 +123,17 @@
 “……嗯？”  
 “说你呢，就是你！”  
 “等等！你不会是在说我吧？”  
-“在这里要说萝莉娘，除了你就没别人了吧。”  
+“要说这里的萝莉娘，除了你就没别人了吧。”  
 “谁是萝莉娘啊，我才不是！！”  
-“我现在授予你 **LABMem No. 009** 的荣誉！  
+“我现在授予你 **LABMem No.009** 的荣誉！  
  今后，允许你作为我凤凰院凶真的部下，参加我们的作战计划！”  
 “为什么我一定要成为你的部下啊，还有那个 LABMem Number 是什么鬼！？”  
 “顾名思义，就是被选为这个 LAB 的正式成员的证明。感到光荣吧！”  
 “说什么光荣……”  
 “接下来，椎名篝！”  
 “呼诶！？”  
-“你也是，**LABMem No. 010**，明白了吗？”  
-“是、是！！”  
+“你也是，**LABMem No.010**，明白了吗？”  
+“是、是！”  
 “等等，凶真！我们俩不能成为 LABMem 喵？”  
 “嗯……？”  
 菲莉丝和琉华子正用不满的眼神看着我。说起来，认定他们俩为 LABMem 是在 α 世界线，而不是在这条世界线。  
