--- a/article/sg0/doc/0009.md
+++ b/article/sg0/doc/0009.md
@@ -12,12 +12,16 @@
 “你好……”  
 “这里是牧濑。”  
 
-![](../static/image/0008-1.png)
+![](../static/image/emoji/app-amadeus.png)
 
 是的，这是『Amadeus』。教授给我安装的这个 App，让我可以无论何时何地，都能够通过我的智能手机连接到位于维克多·孔多利亚大学的服务器。  
 “冈部先生这边当然可以主动联系‘红莉栖’，  
  ‘红莉栖’也会联系你，到时候就请好好应对吧。”  
 虽然当时比屋定真帆这样向我说明了，但是我没想到竟然会是这样。  
+
+![](../static/image/0008-1.png)
+
+
 对方主动联系我什么的……并且人物竟然会显示在屏幕上什么的……  
 “还是说，‘我是克里斯蒂娜’这样自我介绍会比较好呢？”  
 好像……很是生气的样子。  
