--- a/article/sg0/doc/0093.md
+++ b/article/sg0/doc/0093.md
@@ -45,7 +45,7 @@
   - 跳跃世界线后：“清扫军曹”庆功宴结束后的回家路上袭击众人
 
 ## 情报整理 | 重要物品
-- 红莉栖笔记本电脑和移动硬盘
+- 红莉栖笔记本电脑和硬盘
   - 密码已解锁：K331 第一乐章开头旋律
   - 其中有时间机器相关论文
   - 由真帆继承
@@ -69,7 +69,7 @@
 ## Steins;Gate 达成条件
 - ■■ 红莉栖的时间机器相关论文
   - ■■■■■■■■■■
-  - ■■ 红莉栖的笔记本电脑和移动硬盘
+  - ■■ 红莉栖的笔记本电脑和硬盘
 - ■■■■■■■■■■■■■
   - 删除『Amadeus』■■■■■
   - ■■■■■■■■■■
